--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-08-01 03:49:53
+lastsearch = 2024-08-01 14:56:46
 
 [www.tui.co.uk]
-match = -40.0%%
-title = Flight and Travel Options
-url = https://www.tui.co.uk/destinations/info/travel-options
+match = -120.0%%
+title = Repositional and Transatlantic Cruises
+url = https://www.tui.co.uk/cruise/info/repositioning-cruises
 
 [cruisepanda.com]
 match = -213.3%%
 title = 14 Night Asia Cruise On Mein Schiff 5 Departing From ...
-url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-184
+url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-135
 
 [www.changiairport.com]
 match = -213.3%%
@@ -47,8 +47,8 @@ title = Book TUI Flights to Singapore | Skyscanner
 url = https://www.skyscanner.ie/flights/airline-flights-to-city/sins/tui-tom/cheap-flights-with-tui-tom-flights-to-singapore
 
 [www.cruisemapper.com]
-match = -220.0%%
-title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026 | ...
+match = -180.0%%
+title = TUI Cruises - Ships and Itineraries 2024, 2025, 2026
 url = https://www.cruisemapper.com/cruise-lines/TUI-Cruises-32
 
 [travelweekly.co.uk]
@@ -62,9 +62,9 @@ title = Marella Cruises in Asia, sailing from Singapore
 url = https://www.southamptoncruisecentre.com/latest-news/marella-cruises-to-asia-with-dreamliner-to-singapore/
 
 [www.youtube.com]
-match = -220.0%%
-title = lovely Singapore Cruise Terminal | Marella Discovery's ...
-url = https://www.youtube.com/watch?v=slTzZvbO-wA
+match = -133.3%%
+title = Marella Discovery 2 | Asia Cruise | Singapore
+url = https://www.youtube.com/watch?v=aFJ2NNWOP-E
 
 [www.shropshirestar.com]
 match = -206.7%%
@@ -165,4 +165,9 @@ url = https://www.essencemediacom.com/
 match = -80.0%%
 title = All Bags | DeMellier | Shop now
 url = https://demellierlondon.com/collections/all-bags
+
+[www.virginholidays.co.uk]
+match = -46.7%%
+title = Singapore Holidays 2024/2025
+url = https://www.virginholidays.co.uk/destinations/far-east/singapore-holidays
 
