--- a/images/chieu-lac-gam-18/config.ini
+++ b/images/chieu-lac-gam-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-18.html
 lastopen = 2024-06-09 23:47:34
 
 [search]
-lastsearch = 2024-08-01 14:38:29
+lastsearch = 2024-08-01 14:50:41
 
 [www.diepxuan.com]
 match = 22.2%%
@@ -187,9 +187,9 @@ title = 974 người theo dõi trên Pinterest - Petal Designs
 url = https://petaldesigns.co.za/ảnh-cặc-to-anime.html
 
 [m.facebook.com]
-match = -200.0%%
-title = Anh Em United - Để mà hỏi Chido Obi Martin đá như nào ...
-url = https://m.facebook.com/story.php/?story_fbid=461723650074946&id=100087119453381
+match = -131.2%%
+title = LỄ BỐC THĂM CHIA CẶP VÒNG TUYỂN CHỌN AIMAG ...
+url = https://m.facebook.com/caothuLQM/photos/-1800-hôm-nay-lễ-bốc-thăm-chia-cặp-vòng-tuyển-chọn-aimag-2021-bộ-môn-liên-quân-m/1022314476231200/
 
 [baomoi.com]
 match = -193.8%%
