--- a/images/chieu-truc-que-lam-loai-1-15/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-15.html
 lastopen = 2024-06-07 00:19:57
 
 [search]
-lastsearch = 2024-08-01 11:45:51
+lastsearch = 2024-08-01 14:49:17
 
 [thegioidemviet.vn]
 match = 21.4%%
@@ -42,9 +42,9 @@ title = Chiếu Trúc 1M Siêu Chất, Giá Ưu Đãi, Khuyến Mãi Hấp Dẫn
 url = https://www.sendo.vn/chieu-truc-1m.htm
 
 [www.lazada.vn]
-match = 0.0%%
-title = Chiếu Trúc Hạt Quế Lâm hàng loại 1 tem xanh 1m2, 1m5 ...
-url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-hang-loai-1-tem-xanh-1m2-1m5-1m6-i732230394.html
+match = 3.6%%
+title = Chiếu trúc hạt Quế Lâm loại 1, chiếu điều hoà cao cấp
+url = https://www.lazada.vn/products/chieu-truc-hat-que-lam-loai-1-chieu-dieu-hoa-cao-cap-i1845950408.html
 
 [thegioidemonline.com]
 match = -39.3%%
