--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-08-01 13:46:43
+lastsearch = 2024-08-01 15:00:33
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,14 +37,14 @@ title = Bảng giá chiếu Thái Lan dòng gấp vân gỗ cao cấp
 url = https://chieutruc.info/chieu-thai-lan-gap-van-go/
 
 [ipvietnam.gov.vn]
-match = -133.3%%
-title = Bảo hộ Chỉ dẫn địa lý “Cao Bằng” cho sản phẩm trúc sào ...
-url = https://ipvietnam.gov.vn/tin-tuc-su-kien/-/asset_publisher/7xsjBfqhCDAV/content/bao-ho-chi-dan-ia-ly-cao-bang-cho-san-pham-truc-sao-va-chieu-truc-s-2/pop_up?_101_INSTANCE_7xsjBfqhCDAV_viewMode=print
+match = -142.9%%
+title = Bảo hộ Chỉ dẫn địa lý "Cao Bằng" cho sản phẩm trúc sào và ...
+url = https://ipvietnam.gov.vn/web/guest/phat-trien-chi-dan-ia-ly/-/asset_publisher/SGA9PgvmYtWI/content/bao-ho-chi-dan-ia-ly-cao-bang-cho-san-pham-truc-sao-va-chieu-truc-s-1/pop_up?_101_INSTANCE_SGA9PgvmYtWI_viewMode=print
 
 [chieutrelanlan.com]
-match = -19.0%%
-title = Chiếu trúc Việt nam - Thương hiệu Lan Lan
-url = https://chieutrelanlan.com/chieu-truc-p17.html
+match = -114.3%%
+title = Chiếu trúc thương hiệu Việt Nam, chất lượng tốt - Bảo hành ...
+url = https://chieutrelanlan.com/
 
 [thegioidemviet.vn]
 match = -23.8%%
