--- a/images/man-in-hoa-dep-14/config.ini
+++ b/images/man-in-hoa-dep-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-14.html
 lastopen = 2024-06-10 00:17:58
 
 [search]
-lastsearch = 2024-08-01 04:18:57
+lastsearch = 2024-08-01 14:55:23
 
 [www.rockawayinc.com]
 match = 0.0%%
@@ -12,9 +12,9 @@ title =
 url = https://www.rockawayinc.com/hoa/2024-new-florida-hoa-laws/
 
 [www.justanswer.com]
-match = -205.9%%
-title = If an HOA in state does not enforce its rules for a certain ...
-url = https://www.justanswer.com/real-estate-law/mdrrw-hoa-state-does-not-enforce-its-rules-certain.html
+match = -170.6%%
+title = Florida HOA. Are HOAs still able to enter properties ...
+url = https://www.justanswer.com/real-estate-law/ax7ur-florida-hoa-hoas-able-enter-properties.html
 
 [www.nixonpeabody.com]
 match = -182.4%%
@@ -42,9 +42,9 @@ title = HOA Bylaws, HOA Regulations, and CC&Rs
 url = https://spectrumam.com/everything-you-need-to-know-about-hoa-bylaws-regulations-and-ccrs/
 
 [www.quora.com]
-match = -200.0%%
-title = My neighbor is constantly doing things that violate our HOA ...
-url = https://www.quora.com/My-neighbor-is-constantly-doing-things-that-violate-our-HOA-agreement-what-can-I-do
+match = -176.5%%
+title = Can my HOA fine me if they haven't explained what I've ...
+url = https://www.quora.com/Can-my-HOA-fine-me-if-they-haven-t-explained-what-I-ve-done-wrong-They-sent-me-a-picture-2-weeks-ago-of-my-property-with-zero-context-or-explanation-of-what-s-wrong-Today-I-received-a-fine-Again-with-zero
 
 [www.hopb.co]
 match = -141.2%%
