--- a/images/man-re-trang-16/config.ini
+++ b/images/man-re-trang-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-trang-16.html
 lastopen = 2024-06-09 23:51:34
 
 [search]
-lastsearch = 2024-08-01 10:29:58
+lastsearch = 2024-08-01 14:59:52
 
 [www.gov.uk]
 match = -200.0%%
@@ -1125,4 +1125,9 @@ url = https://uk.usembassy.gov/visas/family-immigration/sondaughter-over-21-brot
 match = -33.3%%
 title = Garmin International | Home
 url = https://www.garmin.com/en-US/
+
+[www.alcoda.org]
+match = -200.0%%
+title = Home - Office of the Alameda County District Attorney
+url = https://www.alcoda.org/
 
