--- a/images/tham-giuong-ii-120x190/config.ini
+++ b/images/tham-giuong-ii-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tham-giuong-ii-120x190.html
 lastopen = 2024-06-17 21:10:17
 
 [search]
-lastsearch = 2024-08-01 06:27:24
+lastsearch = 2024-08-01 14:45:45
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html?srsltid=AfmBOooxgh5n-ovilJWtjPB24M34YSRPN_Ba4J8L0af2lXGxsqvjorfr
+match = -22.7%%
+title = Thảm trải giường lông cừu TLC 06 - Hà Nội
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-06.html
 
 [demre.com.vn]
 match = 18.2%%
@@ -29,11 +29,11 @@ url = https://noithatkenli.vn/kich-thuoc-giuong-ngu-cac-loai/
 [ru9.vn]
 match = -86.4%%
 title = Cách Tính Diện Tích, Kích Thước Các Loại ... - Ru9
-url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu?srsltid=AfmBOoqfbqvwOShISbFmgkFmxYxxTbO98CgcytedeLiY2wqztPp0FrQx
+url = https://ru9.vn/blogs/magazine/cach-tinh-dien-tich-kich-thuoc-cac-loai-giuong-ngu
 
 [cafeland.vn]
-match = -109.1%%
-title = Kích thước giường ngủ chuẩn theo phong thủy - CafeLand.Vn
+match = -45.5%%
+title = Kích thước giường ngủ chuẩn theo phong thủy
 url = https://cafeland.vn/xu-huong/kich-thuoc-giuong-ngu-chuan-theo-phong-thuy-91091.html
 
 [www.diepxuan.com]
@@ -59,7 +59,7 @@ url = https://www.animemusicvideos.org/members/members_myprofile.php?user_id=122
 [jysk.vn]
 match = -72.7%%
 title = Kích thước giường ngủ tiêu chuẩn và thông dụng ...
-url = https://jysk.vn/kich-thuoc-giuong-ngu?srsltid=AfmBOopDSVRxgP-X1GhrqeWhzXe-d_fYJHx2ZQSkG1CaJbbNXbTYgn6o
+url = https://jysk.vn/kich-thuoc-giuong-ngu
 
 [anawood.vn]
 match = 15.8%%
@@ -92,8 +92,8 @@ title = 120cm bed for 2 people? - Japan Forum
 url = https://www.tripadvisor.com/ShowTopic-g294232-i525-k6854499-120cm_bed_for_2_people-Japan.html
 
 [comehome.com.vn]
-match = -40.9%%
-title = TOP mẫu giường tầng cho bé trai, bé gái ...
+match = -77.3%%
+title = 100+ Mẫu giường tầng trẻ em đẹp hiện đại giá rẻ ...
 url = https://comehome.com.vn/blog/post/mau-giuong-tang-cho-be
 
 [www.liena.com.vn]
@@ -112,7 +112,7 @@ title = 1 tấm ga trải giường Thẩm mỹ viện đồng bằng ...
 url = https://www.lazada.vn/products/1-tam-ga-trai-giuong-tham-my-vien-dong-bang-tam-ga-trai-giuong-cotton-than-thien-voi-da-cham-mem-mai-chong-co-mat-xa-spa-cokhong-co-lo-i2534625342.html
 
 [vn.my-best.com]
-match = -72.7%%
-title = [2024] Top 10 Ga Trải Giường tốt nhất hiện nay ...
-url = https://vn.my-best.com/37098
+match = -81.8%%
+title = [2024] Top 10 Ga Chống Thấm tốt nhất hiện nay ...
+url = https://vn.my-best.com/37473
 
