--- a/images/tui-warmdream-16/config.ini
+++ b/images/tui-warmdream-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/tui-warmdream-16.html
 lastopen = 2024-06-10 01:14:08
 
 [search]
-lastsearch = 2024-08-01 09:58:22
+lastsearch = 2024-08-01 14:55:45
 
 [www.tiktok.com]
-match = -193.8%%
-title = Trying the Viral Covergirl Lip Stains 🎀 YES GIRL ITS ...
-url = https://www.tiktok.com/@skinstadrea/video/7346309634728299822
+match = -112.5%%
+title = #lipgloss #beautytok @Huda @Huda Beauty
+url = https://www.tiktok.com/@hudabeauty/video/7344789654022950190
 
 [digitalmaine.com]
 match = -75.0%%
