CI images update

--- a/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-epm22063-180x200/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 lastopen = 2024-06-07 00:34:05
 
 [search]
-lastsearch = 2024-08-01 13:39:07
+lastsearch = 2024-08-01 15:19:55
 
 [everon.com.vn]
 match = 14.8%%
@@ -29,7 +29,7 @@ url = https://www.everonvn.vn/chi-tiet/everon-epm24063.html
 [demxanh.com]
 match = 30.6%%
 title = Bộ chăn ga gối Everon modal EPM22063
-url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html?srsltid=AfmBOooN14bK_CrbV684L0D2hnaPB2toO9RqLc3U3BF8nrxHO8cBPfgf
+url = https://demxanh.com/bo-chan-ga-goi-everon-modal-epm22063.html
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -37,9 +37,9 @@ title = Bo Ga chun chần bốn mùa EPM22063 180x200
 url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-epm22063-180x200.html
 
 [www.everonvni.vn]
-match = 20.0%%
-title = BỘ CHĂN GA GỐI TRÀ MY KHOE HƯƠNG - EPM24063
-url = https://www.everonvni.vn/bo-chan-ga-goi-tra-my-khoe-huong-epm24063/
+match = 27.0%%
+title = BỘ CHĂN GA GỐI MIỀN SA MẠC - EST24033
+url = https://www.everonvni.vn/bo-chan-ga-goi-mien-sa-mac-est24033/
 
 [everonhanquoc.vn]
 match = 19.4%%
