--- a/images/vo-chan-ks-uc-23-260/config.ini
+++ b/images/vo-chan-ks-uc-23-260/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-23-260.html
 lastopen = 2024-06-10 00:51:21
 
 [search]
-lastsearch = 2024-08-01 11:28:09
+lastsearch = 2024-08-01 15:25:43
 
 [fsapartners.ed.gov]
 match = -45.0%%
@@ -52,9 +52,9 @@ title = Name: Paul David Adams Address
 url = https://cci.lbl.gov/~paul/Adams-CV-12-2023.pdf
 
 [profiles.ucsf.edu]
-match = 0.0%%
-title = Jennifer Puck, MD
-url = https://profiles.ucsf.edu/jennifer.puck
+match = 11.1%%
+title = Marina Sirota, PhD
+url = https://profiles.ucsf.edu/marina.sirota
 
 [www.ncbi.nlm.nih.gov]
 match = -130.0%%
@@ -152,9 +152,9 @@ title = Theories of the Policy Process
 url = http://ruby.fgcu.edu/courses/twimberley/EVR2861/theorypolprocess.pdf
 
 [www.dhcs.ca.gov]
-match = -155.0%%
-title = List-of-Successfully-Registered-Entities-and-Physicians
-url = https://www.dhcs.ca.gov/Documents/List-of-Successfully-Registered-Entities-and-Physicians.xlsx
+match = -30.0%%
+title = CPE-Pending-QP-list-6-17-2024
+url = https://www.dhcs.ca.gov/services/medi-cal/eligibility/Documents/CPE-Pending-QP-list-6-17-2024.xlsx
 
 [www.cigna.com]
 match = -50.0%%
@@ -257,9 +257,9 @@ title = Climate Impact of Solar Variability
 url = https://ntrs.nasa.gov/api/citations/19910003143/downloads/19910003143.pdf
 
 [profiles.ucdavis.edu]
-match = 0.0%%
-title = Merrill E Gershwin
-url = https://profiles.ucdavis.edu/merrill.gershwin
+match = -38.5%%
+title = R Lor Randall
+url = https://profiles.ucdavis.edu/r.randall
 
 [store.samhsa.gov]
 match = -60.0%%
@@ -309,7 +309,7 @@ url = https://www.ochealthinfo.com/sites/hca/files/import/data/files/25864.pdf
 [profiles.stanford.edu]
 match = -25.0%%
 title = Kevin Schulman - Stanford Profiles
-url = https://profiles.stanford.edu/kevin-schulman?tab=teaching
+url = https://profiles.stanford.edu/kevin-schulman
 
 [publichealth.lacounty.gov]
 match = -155.0%%
