--- a/images/chieu-truc-que-lam-loai-1-16-20/config.ini
+++ b/images/chieu-truc-que-lam-loai-1-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-que-lam-loai-1-16-20.html
 lastopen = 2024-06-09 23:23:20
 
 [search]
-lastsearch = 2024-08-01 13:56:36
+lastsearch = 2024-08-01 15:23:41
 
 [thegioidemviet.vn]
 match = 38.7%%
@@ -29,12 +29,12 @@ url = https://tiki.vn/search?q=chiếu trúc hạt
 [demxanh.com]
 match = -9.7%%
 title = Tổng kho Chiếu trúc cao cấp khuyến mãi giá rẻ nhất 2024
-url = https://demxanh.com/chieu-truc.html?srsltid=AfmBOoqQ2KsvqX_OXogdk4JPKUW8JCIRnxt4hQa-gx4a6AJxftSIL0E4
+url = https://demxanh.com/chieu-truc.html
 
 [www.sendo.vn]
-match = 54.8%%
-title = chiếu trúc hạt quế lâm hoa m8 - hjhgt
-url = https://www.sendo.vn/chieu-truc-hat-que-lam-hoa-m8-29675515.html
+match = 9.7%%
+title = Chiếu Trúc Hạt Quế Lâm 1m2, 1m5, 1m6, 1m8, 2m2 - ct112
+url = https://www.sendo.vn/chieu-truc-hat-que-lam-1m2-1m5-1m6-1m8-2m2-32003669.html?source_block_id=feed&source_page_id=product_detail&source_info=pwa_60_1690329600448_6a818510-b1f7-48b8-b49f-9ce3d3238d35_-1_ishyperproductdetail0_0_41_26_-1
 
 [www.lazada.vn]
 match = 16.1%%
