--- a/images/nem-lo-xo-everon-pocket-18/config.ini
+++ b/images/nem-lo-xo-everon-pocket-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 lastopen = 2024-06-27 21:31:03
 
 [search]
-lastsearch = 2024-08-01 12:51:54
+lastsearch = 2024-08-01 15:24:21
 
 [www.everonvn.vn]
 match = 69.2%%
@@ -17,9 +17,9 @@ title = Điệp Xuân Nệm lò xo Everon Pocket 18
 url = https://www.diepxuan.com/nem-lo-xo-everon-pocket-18.html
 
 [everon.online]
-match = -42.3%%
-title = Tổng Đại Lý Chăn Ga Gối Đệm Everon Artemis King Koil
-url = https://everon.online/collections/dem-everon
+match = -26.9%%
+title = Bảng Giá Đệm Lò Xo Everon, Đệm Lò Xo Mỹ King Koil ...
+url = https://everon.online/collections/dem-lo-xo-everon
 
 [demchinhhang.com]
 match = 80.8%%
@@ -27,9 +27,9 @@ title = Đệm Lò Xo Everon Pocket Pops
 url = https://demchinhhang.com/products/dem-lo-xo-tui-everon-pocket-pops
 
 [nemhana.com]
-match = -53.8%%
-title = Khám phá bí quyết tái tạo mỗi ngày cùng nệm Everon
-url = https://nemhana.com/nem-everon/
+match = 69.2%%
+title = Nệm lò xo túi Everon Pocket Pops
+url = https://nemhana.com/nem-lo-xo-tui-everon-pocket-pops/
 
 [go2joyvn.myharavan.com]
 match = 26.9%%
