--- a/images/ruot-nem-korea-9f-12/config.ini
+++ b/images/ruot-nem-korea-9f-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-12.html
 lastopen = 2024-06-09 23:03:30
 
 [search]
-lastsearch = 2024-08-01 12:30:31
+lastsearch = 2024-08-01 15:28:50
 
 [www.diepxuan.com]
 match = -35.0%%
@@ -22,9 +22,9 @@ title = Nemesis hits rank 2 Korea - 1726 lp : r/leagueoflegends
 url = https://www.reddit.com/r/leagueoflegends/comments/17odwx2/nemesis_hits_rank_2_korea_1726_lp/
 
 [en.wikipedia.org]
-match = -45.5%%
-title = Kristi Noem
-url = https://en.wikipedia.org/wiki/Kristi_Noem
+match = -33.3%%
+title = Nam Joo-hyuk
+url = https://en.wikipedia.org/wiki/Nam_Joo-hyuk
 
 [www.facebook.com]
 match = -160.0%%
@@ -102,14 +102,14 @@ title =
 url = https://english.moe.go.kr/sub/infoRenewal.do?m=0301&page=0301&s=english
 
 [cryptonews.com]
-match = -110.0%%
-title = Escaped South Korean Criminal Suspect 'Robs OTC ...
-url = https://cryptonews.com/news/escaped-south-korean-criminal-suspect-used-weapon-to-rob-otc-crypto-buyer.htm
+match = -115.0%%
+title = 37 New Crypto ETFs and ETPs Listed in First Half of 2024
+url = https://cryptonews.com/news/37-new-crypto-etfs-and-etps-listed-in-first-half-of-2024-etfgi-data.htm
 
 [www.google.com]
 match = 0.0%%
 title = 
-url = https://www.google.com/search?sca_esv=584cd96bcb8b380e&sca_upv=1&q=What+is+a+Korean+phone+number?&sa=X&ved=2ahUKEwiypsLQpb6HAxW3EVkFHfutCgwQsZYEegQIGxAC
+url = https://www.google.com/search?sca_esv=12268370a69439db&sca_upv=1&q=Did+Nam+Joo+Hyuk+go+to+college?&sa=X&ved=2ahUKEwj7gMuAsNOHAxX8mIkEHSv5B4gQsZYEegQIShAC
 
 [files.eric.ed.gov]
 match = -115.0%%
@@ -192,9 +192,9 @@ title = 12 Days in Seoul - by LA Seoulite - Everything about Korea
 url = https://laseoulite.substack.com/p/12-days-in-seoul
 
 [www.tiktok.com]
-match = -145.0%%
-title = Novo jogo para relaxar, confia !! #thamasm #soulslike ...
-url = https://www.tiktok.com/@thamasmorelli/video/7395314909698870534
+match = -15.0%%
+title = Maddy Mcgraw Meet and Greet
+url = https://www.tiktok.com/discover/maddy-mcgraw-meet-and-greet
 
 [www.imdb.com]
 match = 0.0%%
@@ -410,4 +410,9 @@ url = https://www.hastingstribune.com/ap/health/ap-news-summary-at-4-33-p-m-edt/
 match = -70.0%%
 title = CNN: Breaking News, Latest News and Videos
 url = https://www.cnn.com/
+
+[sdcommunitypower.org]
+match = -120.0%%
+title = AGENDA Regular Meeting of the Board of Directors of ...
+url = https://sdcommunitypower.org/wp-content/uploads/2020/12/00.-Agenda-Packet-1.23.23-Board-of-Directors-3.pdf
 
