--- a/images/tui-korea-14/config.ini
+++ b/images/tui-korea-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-korea-14.html
 lastopen = 2024-06-17 10:35:06
 
 [search]
-lastsearch = 2024-08-01 11:35:55
+lastsearch = 2024-08-01 15:26:04
 
 [www.tui.co.uk]
 match = 0.0%%
@@ -57,9 +57,9 @@ title = Hotel inkl. Flug Südkorea - Pauschalreisen
 url = https://www.tui.com/pauschalreisen/suedkorea/
 
 [www.linkedin.com]
-match = -200.0%%
-title = TUI
-url = https://www.linkedin.com/company/tuigroup
+match = -350.0%%
+title = We take travel to new heights: TUI launches holiday trips ...
+url = https://www.linkedin.com/posts/tuigroup_we-take-travel-to-new-heights-tui-launches-activity-7180438234118643713-PVeJ
 
 [maritime-executive.com]
 match = -308.3%%
