--- a/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
+++ b/images/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 lastopen = 2024-06-07 00:25:40
 
 [search]
-lastsearch = 2024-08-01 11:18:30
+lastsearch = 2024-08-01 15:48:41
 
 [dreamland.vn]
 match = 7.5%%
@@ -18,13 +18,13 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-dreamland-uc-freesize-nk-gam-pt.ht
 
 [demluxury.com.vn]
 match = 31.6%%
-title = Bộ chăn ga gối Cotton MOC 01 Dreamland
-url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-01-dreamland/
+title = Bộ chăn ga gối Cotton MOC 03 Dreamland
+url = https://demluxury.com.vn/san-pham/bo-chan-ga-goi-cotton-moc-03-dreamland/
 
 [www.facebook.com]
 match = -8.0%%
 title = Chăn Ga Gối Đệm Dreamland
-url = https://www.facebook.com/Dreamland.com.vn/
+url = https://www.facebook.com/changagoidemdreamland/
 
 [thegioidemonline.com]
 match = 62.8%%
