--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-01 12:41:19
+lastsearch = 2024-08-01 15:40:07
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -17,9 +17,9 @@ title = Bộ chăn ga gối Sông Hồng dòng Basic mã mầu BC16
 url = https://songhong.info/chan-ga-goi-bc16
 
 [demxanh.com]
-match = -52.4%%
-title = Bộ chăn ga gối cotton 5 món chăn hè ga chun chần 16
-url = https://demxanh.com/bo-chan-ga-goi-cotton-5-mon-chan-he-ga-chun-chan-16.html
+match = -19.0%%
+title = Bộ ga gối chun Olympia chần vải Cotton Hàn 16
+url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html
 
 [foreverbedding.net]
 match = -57.1%%
@@ -27,9 +27,9 @@ title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
 url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
 
 [changagoidemsonghong.com]
-match = -19.0%%
-title = Chăn ga gối 100%% cotton mã mầu BC22-060
-url = https://changagoidemsonghong.com/chan-ga-goi-bc60
+match = -104.8%%
+title = Mẫu chăn ga gối trẻ em TE19 08 cotton Sông Hồng Sale -30%%
+url = https://changagoidemsonghong.com/chan-ga-goi-te19-08
 
 [everonletrongtan.com]
 match = 19.0%%
@@ -57,9 +57,9 @@ title = ga gối cotton xoa nhung đám cưới hồng mvdv16
 url = https://shopee.vn/search?keyword=ga gối cotton xoa nhung đám cưới hồng mvdv16
 
 [runa.vn]
-match = -23.8%%
-title = Bộ Chăn Ga Gối Satin Cotton Màu Chocolate
-url = https://runa.vn/bo-chan-ga-goi-satin-cotton-mau-beige
+match = -4.8%%
+title = Bộ Chăn Ga Gối Satin Cotton Màu Wheat
+url = https://runa.vn/bo-chan-ga-goi-satin-cotton-mau-wheat
 
 [hoangkimhome.com]
 match = -90.5%%
