--- a/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
+++ b/images/chieu-dieu-hoa-khong-goi-re-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-khong-goi-re-18.html
 lastopen = 2024-06-09 22:26:11
 
 [search]
-lastsearch = 2024-08-01 13:50:28
+lastsearch = 2024-08-01 15:48:21
 
 [demxanh.com]
 match = -3.3%%
@@ -12,9 +12,9 @@ title = Bảng giá chiếu điều hòa cao cấp giá tốt nhất tại ...
 url = https://demxanh.com/chieu-dieu-hoa.html
 
 [shopee.vn]
-match = -6.7%%
-title = Chiếu điều hòa có mát không? Loại nào tránh nóng tốt nhất?
-url = https://shopee.vn/blog/chieu-dieu-co-mat-khong/
+match = 10.0%%
+title = CHIẾU ĐIỀU HÒA SỢI MẤY LÓT LỤA CAO CẤP HÀNG ...
+url = https://shopee.vn/CHIẾU-ĐIỀU-HÒA-SỢI-MẤY-LÓT-LỤA-CAO-CẤP-HÀNG-LOẠI-1-i.914808892.24557268713
 
 [demviethome.vn]
 match = 26.7%%
