--- a/images/chieu-lac-d2-16/config.ini
+++ b/images/chieu-lac-d2-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-lac-d2-16.html
 lastopen = 2024-06-06 16:54:08
 
 [search]
-lastsearch = 2024-08-01 13:49:46
+lastsearch = 2024-08-01 15:39:25
 
 [vinatools.com]
 match = -140.0%%
 title = Kéo cắt tôn dày 1.0mm kiểu dáng cổ điển Bessey
-url = https://vinatools.com/keo-cat-ton-d-216-116/?srsltid=AfmBOoomciQMbFbFEumIvRXdDqvkL3xYTUTpI9rm132gmgwETCMc4_iR
+url = https://vinatools.com/keo-cat-ton-d-216-116/
 
 [www.vietnamairport.vn]
 match = -213.3%%
@@ -47,9 +47,9 @@ title = Cowon D2 gia nhập 'câu lạc bộ 16 GB'
 url = https://vnexpress.net/cowon-d2-gia-nhap-cau-lac-bo-16-gb-1500501.html
 
 [www.facebook.com]
-match = -160.0%%
-title = BẠN CÓ HẸN VỚI PERCE%%T NGUYỄN GIA TRÍ 69/1/7 ...
-url = https://www.facebook.com/percentcoffee.vn/videos/bạn-có-hẹn-với-percet-nguyễn-gia-trí6917-nguyễn-gia-trí-p25-quận-bình-thạnh-với-/2962693920542427/
+match = -233.3%%
+title = Ngày mai 7/3 chi nhánh 16 (73 Nguyễn... - Ways Station ...
+url = https://www.facebook.com/waysstation/posts/ngày-mai-73-chi-nhánh-16-73-nguyễn-văn-lạc-bình-thạnh-chính-thức-hoạt-động-lại-n/1220849978345623/
 
 [banhang.shopee.vn]
 match = -66.7%%
