--- a/images/man-re-xanh-10/config.ini
+++ b/images/man-re-xanh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-re-xanh-10.html
 lastopen = 2024-06-07 00:54:04
 
 [search]
-lastsearch = 2024-08-01 06:17:35
+lastsearch = 2024-08-01 15:42:29
 
 [screenrant.com]
 match = 0.0%%
@@ -32,9 +32,9 @@ title = Màn chụp giá rẻ
 url = https://demxanh.com/man-chup-gia-re.html
 
 [www.uscis.gov]
-match = -50.0%%
-title = Explore my Options | USCIS
-url = https://www.uscis.gov/forms/explore-my-options
+match = 0.0%%
+title = 
+url = https://www.uscis.gov/i-90
 
 [www.evergreenrecreation.com]
 match = -157.1%%
