--- a/images/man-tu-bung-16/config.ini
+++ b/images/man-tu-bung-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-tu-bung-16.html
 lastopen = 2024-06-09 23:58:19
 
 [search]
-lastsearch = 2024-08-01 13:55:16
+lastsearch = 2024-08-01 15:50:01
 
 [www.bible.com]
 match = -157.1%%
@@ -22,14 +22,14 @@ title = Mùng chụp tự bung F1 - màu trắng
 url = https://mungmocmien.com/products/nhan-ban-tu-mung-chup-tu-bung-f1-mau-xanh
 
 [munghoangphat.com]
-match = -150.0%%
-title = MÙNG NGỦ, MÙNG CHỤP TỰ BUNG CAO CẤP HOÀNG PHÁT
-url = https://munghoangphat.com/
+match = -21.4%%
+title = màn chụp đỉnh vuông tự bung
+url = https://munghoangphat.com/man-chup-dinh-vuong-tu-bung/
 
 [manthutrang.com]
-match = -207.1%%
-title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
-url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
+match = -228.6%%
+title = Hướng dẫn sử dụng màn tự bung đỉnh rộng chân vải Thu Trang
+url = https://manthutrang.com/blogs/video/huong-dan-su-dung-man-tu-bung-dinh-rong-chan-vai-thu-trang
 
 [easydream.vn]
 match = -178.6%%
@@ -53,7 +53,7 @@ url = https://boba.vn/man-chup-tu-bung-nguoi-lon/man-chup-tu-bung-gia-long-1-6-1
 
 [shopee.vn]
 match = -128.6%%
-title = màn chụp giá tốt Tháng 8, 2024 | Mua ngay
+title = màn chụp giá tốt Tháng 7, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=màn chụp
 
 [text.egwwritings.org]
