--- a/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm/config.ini
@@ -4,16 +4,16 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-180x200x27-cloud-firm.h
 lastopen = 2024-07-01 00:11:36
 
 [search]
-lastsearch = 2024-08-01 14:00:45
+lastsearch = 2024-08-01 15:49:21
 
 [www.everonvn.vn]
-match = 7.4%%
-title = ĐỆM LÒ XO EVERON, KING KOIL
-url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
+match = 31.1%%
+title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
 
 [everonkorea.com]
-match = 14.9%%
-title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm - Everon Korea
+match = 31.8%%
+title = Đệm lò xo Kingkoil Cloud Pillow Top cao 27cm
 url = https://everonkorea.com/dem-lo-xo-kingkoil-cloud-pillow-top/
 
 [demxanh.com]
@@ -37,9 +37,9 @@ title = Điệp Xuân Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
 url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
 
 [www.everonqb.com]
-match = 57.4%%
-title = Nệm lò xo Everon Kingkoil Cloud Firm 200x220x27
-url = https://www.everonqb.com/nem-lo-xo-everon-kingkoil-cloud-firm-200x220x27.html
+match = 21.3%%
+title = Everon Quảng Bình Nệm lò xo Everon Bonnell 160x200x23
+url = https://www.everonqb.com/nem-lo-xo-everon-bonnell-160x200x23.html
 
 [everonvn.com.vn]
 match = 25.6%%
