--- a/images/nem-pyeoda-thuong-18/config.ini
+++ b/images/nem-pyeoda-thuong-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/nem-pyeoda-thuong-18.html
 lastopen = 2024-06-18 17:45:17
 
 [search]
-lastsearch = 2024-08-01 13:18:49
+lastsearch = 2024-08-01 15:45:07
 
 [www.facebook.com]
-match = -45.0%%
-title = Chăn Ga Gối Đệm Pyeoda - Như Tình Yêu Của Mẹ
-url = https://www.facebook.com/pyeoda.vn/posts/pyoeda-thương-hiệu-của-công-ty-tnhhtm-ngọc-dũng-là-công-ty-sản-xuất-chăn-ga-gối-/873479032786443/
+match = -145.0%%
+title = Hé lộ siêu phẩm mới - bộ chăn ga Pyeoda Dora Xem chi tiết ...
+url = https://www.facebook.com/vuanem.vn/videos/-hé-lộ-siêu-phẩm-mới-bộ-chăn-ga-pyeoda-dora-xem-chi-tiết-httpsvuanemcombo-chan-g/1219711438195514/
 
 [demxanh.com]
-match = -75.0%%
-title = Chăn ga gối Tencel Pyeoda Hàn Quốc đa sắc 5 món 18
-url = https://demxanh.com/chan-ga-goi-tencel-pyeoda-han-quoc-da-sac-5-mon-18.html
+match = -85.0%%
+title = Chăn ga gối Singapore Pyeoda LCHARME gấm 7 món PL18
+url = https://demxanh.com/chan-ga-goi-singapore-pyeoda-lcharme-gam-7-mon-pl18.html?srsltid=AfmBOop_W1sqxa_PgfQx3jD47a46UAfn64JGbdu-MhzgnkF5y622AOg-
 
 [www.khodemthanhdo.com]
-match = -8.3%%
-title = ĐỆM THÀNH ĐÔ
-url = https://www.khodemthanhdo.com/
+match = -45.0%%
+title = Bộ chăn ga gối tencel eu pyeoda 5 món
+url = https://www.khodemthanhdo.com/products/bo-chan-ga-goi-tencel-eu-pyeoda-5-mon
 
 [pyeoda.vn]
 match = -95.0%%
