--- a/images/vo-chan-ks-uc-20-22/config.ini
+++ b/images/vo-chan-ks-uc-20-22/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-chan-ks-uc-20-22.html
 lastopen = 2024-06-09 22:13:27
 
 [search]
-lastsearch = 2024-08-01 10:46:15
+lastsearch = 2024-08-01 15:36:07
 
 [profiles.icts.uci.edu]
 match = -7.1%%
@@ -27,9 +27,9 @@ title = Li Zhang, PhD
 url = https://profiles.ucsf.edu/li.zhang
 
 [www.ncbi.nlm.nih.gov]
-match = -168.4%%
-title = Review of influenza-associated pulmonary aspergillosis in ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC7306567/
+match = -73.7%%
+title = EFFECTS OF MUSCLE STRENGTHENING AND ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8814870/
 
 [www.lebow.drexel.edu]
 match = -126.3%%
@@ -390,4 +390,9 @@ url = https://www.efsa.europa.eu/sites/default/files/efsa_rep/blobserver_assets/
 match = -147.4%%
 title = From one-stop shop to no-stop shop: An e-government ...
 url = https://www.sciencedirect.com/science/article/pii/S0740624X17304239
+
+[ipsworks.org]
+match = -6.2%%
+title = Evidence for IPS
+url = https://ipsworks.org/index.php/evidence-for-ips/
 
