--- a/images/ga-ni-long-16/config.ini
+++ b/images/ga-ni-long-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-16.html
 lastopen = 2024-06-09 23:07:25
 
 [search]
-lastsearch = 2024-08-01 10:44:49
+lastsearch = 2024-08-01 15:55:28
 
 [www.georgianicols.com]
 match = -169.2%%
@@ -32,9 +32,9 @@ title = Anthony Edwards (basketball)
 url = https://en.wikipedia.org/wiki/Anthony_Edwards_(basketball)
 
 [www.facebook.com]
-match = -61.5%%
-title = Northwest Georgia Scanner
-url = https://www.facebook.com/NWGAScanner/
+match = -84.6%%
+title = 3:16 Healthcare | Bremen GA
+url = https://www.facebook.com/316Healthcare/
 
 [www.youtube.com]
 match = -338.5%%
@@ -547,8 +547,8 @@ title =
 url = https://www.federalregister.gov/agencies/health-resources-and-services-administration
 
 [www.gsu.edu]
-match = -53.8%%
-title = Georgia State University
+match = -115.4%%
+title = Blue Line Georgia State University
 url = https://www.gsu.edu/
 
 [www.mariettaga.gov]
