--- a/images/nem-everon-180x200x15-extrafoam/config.ini
+++ b/images/nem-everon-180x200x15-extrafoam/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-180x200x15-extrafoam.html
 lastopen = 2024-06-06 17:10:38
 
 [search]
-lastsearch = 2024-08-01 13:38:05
+lastsearch = 2024-08-01 15:54:28
 
 [www.everonvn.vn]
 match = -22.6%%
@@ -97,8 +97,8 @@ title = Chăn Ga Gối Nệm Everon Chính Hãng Giá Rẻ
 url = https://vuanem.com/brand/everon
 
 [www.lazada.vn]
-match = -38.7%%
-title = Nệm Bông Ép Gấp 3 K-Bedding By Everon nhiều kích ...
+match = -48.4%%
+title = Nệm Bông Ép Gấp 3 K-Bedding By Everon KMS nhiều kích ...
 url = https://www.lazada.vn/products/nem-bong-ep-gap-3-everon-lite-bao-hanh-5-nam-giao-mau-ngau-nhien-i559250099.html
 
 [everonvietnam.com]
