--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-01 12:41:40
+lastsearch = 2024-08-01 15:47:14
 
 [chanrathanhthuy.com]
-match = 9.7%%
-title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
-url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
+match = -3.2%%
+title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
+url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
 
 [demxanh.com]
 match = 58.1%%
 title = Bộ chăn ga gối Hanvico LIVING - LV18
-url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html?srsltid=AfmBOopM0g2iUCvZ8vw6zDtb73LUUY6FoWDOmtOzrh64vOkukWYHDOHx
+url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html?srsltid=AfmBOorLjYWtiqTNZMoRQrNbcSWK8CA9Yi7EmDTIYU7ofWEJlZC7X0ZC
 
 [songhongonline.vn]
-match = 50.0%%
-title = Bộ chăn ga gối SH_UC23 035
-url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc23-035
+match = 53.8%%
+title = Bộ chăn ga gối SH_UT23 028
+url = https://songhongonline.vn/products/nhan-ban-tu-bo-chan-ga-goi-sh-ut23-032
 
 [changagoidemsonghong.com]
 match = -29.0%%
@@ -32,9 +32,9 @@ title = Màu Sắc Chăn Ga Gối Đệm Phong Thủy Cho Người Mệnh Hỏa
 url = https://foreverbedding.net/mau-sac-chan-ga-goi-dem-phong-thuy-cho-nguoi-menh-hoa
 
 [shopee.vn]
-match = -29.0%%
-title = Bộ chăn ga gối cotton 5 món khách sạn Nanomex chất liệu vải ...
-url = https://shopee.vn/Bộ-chăn-ga-gối-cotton-5-món-khách-sạn-Nanomex-chất-liệu-vải-T200-đến-T400-đủ-kích-thước-i.906764929.23418215255
+match = -12.9%%
+title = Bộ Chăn Ga Gối Cotton Tici M2T Bedding Drap Giường Đủ ...
+url = https://shopee.vn/Bộ-Chăn-Ga-Gối-Cotton-Tici-M2T-Bedding-Drap-Giường-Đủ-Kích-Thước-Trải-Nệm-1m-1m2-1m4-1m6-1m8-2m2-Không-Kèm-Ruột-i.240825360.5023438940
 
 [gonbedding.vn]
 match = 41.9%%
@@ -82,9 +82,9 @@ title = Bộ chăn ga gối Cotton sọc vuông hai lớp ZH6289
 url = https://flexhouse.vn/bọ-chan-ga-goi-cotton-soc-vuong-hai-lop-zh6289
 
 [changagoidemsonghong.online]
-match = -19.4%%
-title = Top 10+ bộ chăn ga gối Sông Hồng chính hãng giá tốt, được ...
-url = https://changagoidemsonghong.online/top-10-bo-chan-ga-goi-song-hong-chinh-hang-gia-tot-duoc-yeu-thich.html
+match = 48.4%%
+title = Bộ chăn ga gối đệm giá bao nhiêu?
+url = https://changagoidemsonghong.online/bo-chan-ga-goi-dem-gia-bao-nhieu.html
 
 [www.facebook.com]
 match = -6.5%%
@@ -250,4 +250,9 @@ url = https://digitallibrary.usc.edu/archive/Howard-Swan--Charles-Hirt--and-Roge
 match = -41.9%%
 title = Laserfiche WebLink - IIS Windows Server - Davie County
 url = https://docs.daviecountync.gov/WebLink/1/doc/78795/Page19.aspx
+
+[thegioidemtot.vn]
+match = 45.2%%
+title = 99+ BỘ CHĂN GA GỐI SÔNG HỒNG CLASSIC
+url = https://thegioidemtot.vn/82-bo-chan-ga-goi-song-hong-dong-classic.html
 
