--- a/images/bo-ga-goi-chun-xoa-18/config.ini
+++ b/images/bo-ga-goi-chun-xoa-18/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-18.html
 lastopen = 2024-06-09 23:12:50
 
 [search]
-lastsearch = 2024-08-01 14:48:32
+lastsearch = 2024-08-01 15:52:21
 
 [hanvico.com.vn]
-match = 38.1%%
-title = Bộ ga chun LIVING - LV18
-url = https://hanvico.com.vn/san-pham/bo-ga-chun-living-lv18/
+match = 28.6%%
+title = Bộ ga chun My Youth - MY18
+url = https://hanvico.com.vn/san-pham/bo-ga-chun-my-youth-my18/
 
 [foreverbedding.net]
-match = -57.1%%
-title = Bộ ga chun chần mặt Velina V18 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v18?srsltid=AfmBOorpqvEzMDwxKgGhLF5rCdFxLy-lCKtSb0rSUpaCVwBFtmSeC8i3
+match = -33.3%%
+title = Bộ ga chun Velina V18 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-velina-v18?srsltid=AfmBOoot8zhSI97RiyeAstxUTmvdu9CNoFCGR36LoNPPJ-KrCfuxFmhG
 
 [shopee.vn]
 match = -114.3%%
@@ -39,7 +39,7 @@ url = https://songhong.info/chan-ga-goi-uc018
 [www.diepxuan.com]
 match = -9.5%%
 title = Bộ chun xoa 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/bo-chun-xoa-180x200.html?srsltid=AfmBOoqFzV1F4V0tCQWGBz26qAOcnpK1cQcDpBCwZV4F3TBwBo8NUGrh
+url = https://www.diepxuan.com/bo-chun-xoa-180x200.html?srsltid=AfmBOop3HTDmJC4ktii8qD2UctW-q8kezGMLpmUTXWFtR8ibVYj3fTS7
 
 [hoangkimhome.com]
 match = -90.5%%
