--- a/images/chan-5-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-5-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-5-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-10 00:08:59
 
 [search]
-lastsearch = 2024-08-01 12:14:35
+lastsearch = 2024-08-01 15:58:39
 
 [h5.lazada.vn]
 match = -11.1%%
@@ -19,17 +19,17 @@ url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg
 [www.lazada.vn]
 match = 3.7%%
 title = Chăn Tuyết Nhung 5kg Giá Tốt T05/2024
-url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/
+url = https://www.lazada.vn/tag/chan-tuyet-nhung-5kg/?srsltid=AfmBOopSYQvy_U-K5UpMKHILPK6wlosYTR3fH_uZaLmnNKC9jy_GKjpZ
 
 [tiki.vn]
-match = -3.7%%
-title = Chăn tuyết nhung hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chăn tuyết nhung
+match = 11.1%%
+title = Chăn nhung tuyết hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chăn nhung tuyết
 
 [demxanh.com]
 match = -18.5%%
 title = Chăn tuyết Hàn Quốc Soft 2kg màu trắng hình tim
-url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html
+url = https://demxanh.com/chan-tuyet-han-quoc-soft-2kg-mau-trang-hinh-tim.html?srsltid=AfmBOooa8TwkxO3ZhElvSyO0RVp8nzN1JES8WQCquod0gWDFR9kkuvk7
 
 [ninhouse.vn]
 match = 32.0%%
@@ -154,7 +154,7 @@ url = https://dantri.com.vn/du-lich/khach-tay-thang-than-noi-ly-do-tai-sao-me-vi
 [www.facebook.com]
 match = -37.0%%
 title = Chăn 3kg 4 kg 5kg Thành... - Chiếu Cói Thân Vui Thái Bình
-url = https://www.facebook.com/permalink.php/?story_fbid=436093618729320&id=100069860554625
+url = https://www.facebook.com/story.php/?story_fbid=436093618729320&id=100069860554625
 
 [stockbiz.vn]
 match = 18.5%%
