--- a/images/chieu-nhua-ha-noi-du-lich-16/config.ini
+++ b/images/chieu-nhua-ha-noi-du-lich-16/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-16.html
 lastopen = 2024-06-09 23:14:36
 
 [search]
-lastsearch = 2024-08-01 11:48:11
+lastsearch = 2024-08-01 15:58:18
 
 [www.diepxuan.com]
-match = 35.7%%
-title = Chiếu nhựa Hà Nội du lịch 180x200 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-nhua-ha-noi-du-lich-180x200.html
+match = 42.9%%
+title = Chiếu nhựa Hà Nội 100x190 - Điệp Xuân
+url = https://www.diepxuan.com/chieu-nhua-ha-noi-100x190.html?srsltid=AfmBOoruIdl6oaAgVovC_2x2PUpb4h6pxEwMOBRdA0Pn8kR04Bd30jZt
 
 [shopee.vn]
 match = 32.1%%
@@ -17,14 +17,14 @@ title = chiếu nhựa gấp gọn Thái Bình tiện dụng
 url = https://shopee.vn/chiếu-nhựa-gấp-gọn-Thái-Bình-tiện-dụng-i.114438421.3932155248
 
 [tiki.vn]
-match = -21.4%%
-title = Chiếu nhựa việt nam 2mx4m hàng chính hãng, giao nhanh
-url = https://tiki.vn/search?q=chiếu nhựa việt nam 2mx4m
+match = 3.6%%
+title = Chiếu nhựa gấp gọn hàng chính hãng, giao nhanh
+url = https://tiki.vn/search?q=chiếu nhựa gấp gọn
 
 [www.yellowpages.vn]
-match = -5.3%%
-title = sản xuất chiếu nhựa
-url = https://www.yellowpages.vn/tgcls/40490435/sản-xuất-chiếu-nhựa.html?j=3
+match = 0.0%%
+title = danh sách Chiếu Nhựa
+url = https://www.yellowpages.vn/tgcls/10490435/Chiếu-Nhựa.html?j=0
 
 [www.dienmayxanh.com]
 match = -35.7%%
@@ -37,9 +37,9 @@ title = LỊCH HỘI CHỢ VÀ TRIỂN LÃM THƯƠNG MẠI TẠI HÀ NỘI ...
 url = https://tradepro.vn/vi/hoi-cho-trien-lam/ha-noi
 
 [www.sendo.vn]
-match = -7.1%%
-title = Chiếu Nhựa Văn Phòng Bền Đẹp, Rẻ Như Tặng, Chất ...
-url = https://www.sendo.vn/chieu-nhua-van-phong.htm
+match = 42.9%%
+title = chiếu nhựa thái 1m8x3m - sp 66677
+url = https://www.sendo.vn/chieu-nhua-thai-1m8x3m-37120771.html
 
 [mia.vn]
 match = -39.3%%
