--- a/images/chieu-truc-cong-ty-16-20/config.ini
+++ b/images/chieu-truc-cong-ty-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-cong-ty-16-20.html
 lastopen = 2024-06-09 23:50:30
 
 [search]
-lastsearch = 2024-08-01 01:49:09
+lastsearch = 2024-08-01 15:45:56
 
 [chieutrelanlan.com]
 match = -41.7%%
@@ -57,9 +57,9 @@ title = CHIẾU TRE TRÚC HCM | Ho Chi Minh City
 url = https://www.facebook.com/chieutructot/
 
 [chieutrucsaigon.com]
-match = 12.5%%
-title = NHÀ BÁN LẼ CHIẾU TRÚC HÀNG ĐẦU TPHCM
-url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/nha-ban-le-chieu-truc-hang-dau-tphcm-83.html
+match = 0.0%%
+title = SHOP BÁN CHIẾU TRE TRÚC QUẬN THỦ ĐỨC
+url = https://chieutrucsaigon.com/tin-tuc/tin-tuc-moi/shop-ban-chieu-tre-truc-quan-thu-duc-67.html
 
 [www.xskthcm.com]
 match = -83.3%%
