--- a/images/ga-ni-long-18/config.ini
+++ b/images/ga-ni-long-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-18.html
 lastopen = 2024-06-09 23:39:01
 
 [search]
-lastsearch = 2024-07-31 21:47:02
+lastsearch = 2024-08-01 16:00:47
 
 [www.zillow.com]
 match = -69.2%%
@@ -418,8 +418,8 @@ url = https://www.jonesfh.org/obituary/Stefania-Thompson
 
 [www.deutschconnectorstore.com]
 match = -200.0%%
-title = Deutsch 0462-005-20141 Size 20 Contact 18-16 Ga
-url = https://www.deutschconnectorstore.com/p-701-deutsch-0462-005-20141-contact-18-16-ga.html
+title = Deutsch 0460-010-20141 Size 20 Contact 18-16 Ga
+url = https://www.deutschconnectorstore.com/p-700-deutsch-0460-010-20141-contact-18-16-ga.html
 
 [mangadex.org]
 match = -307.7%%
@@ -609,7 +609,7 @@ url = https://apnews.com/article/willis-wade-relationship-allegations-trump-elec
 [www.lazada.vn]
 match = -176.9%%
 title = Ga Ni Long Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/ga-ni-long/?srsltid=AfmBOopNQpZwnsRL--lo2YUUqPU_EmAhmZcy5DUEnqJLVOYq6BARwDkE
+url = https://www.lazada.vn/tag/ga-ni-long/
 
 [www.njcaa.org]
 match = -140.0%%
