--- a/images/tui-singapore14/config.ini
+++ b/images/tui-singapore14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tui-singapore14.html
 lastopen = 2024-06-17 10:45:32
 
 [search]
-lastsearch = 2024-08-01 14:56:46
+lastsearch = 2024-08-01 15:51:42
 
 [www.tui.co.uk]
-match = -120.0%%
-title = Repositional and Transatlantic Cruises
-url = https://www.tui.co.uk/cruise/info/repositioning-cruises
+match = -153.3%%
+title = Where We Fly | Flights with TUI 2024 / ...
+url = https://www.tui.co.uk/flight/where-we-fly
 
 [cruisepanda.com]
 match = -213.3%%
 title = 14 Night Asia Cruise On Mein Schiff 5 Departing From ...
-url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-135
+url = https://cruisepanda.com/cruise-deals/14-night-asia-cruise-on-mein-schiff-5-departing-from-singapore-184
 
 [www.changiairport.com]
 match = -213.3%%
