CI images update

--- a/images/chieu-lac-gam-14/config.ini
+++ b/images/chieu-lac-gam-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-14.html
 lastopen = 2024-06-09 23:47:29
 
 [search]
-lastsearch = 2024-08-01 14:29:53
+lastsearch = 2024-08-01 16:42:07
 
 [www.diepxuan.com]
 match = 56.2%%
@@ -27,9 +27,9 @@ title = Chiếu Lác: Nơi bán giá rẻ, uy tín, chất lượng nhất
 url = https://websosanh.vn/s/chiếu+lác.htm
 
 [www.youtube.com]
-match = -181.2%%
-title = Nước lũ dâng cao, nhiều nơi chìm trong biển nước | VTC16
-url = https://www.youtube.com/watch?v=d0pMIC4bxBQ
+match = -168.8%%
+title = Sài Gòn ĐÊM VẮNG LIÊU XIÊU CẢNH CHỢ 100 NĂM | CHỢ ...
+url = https://www.youtube.com/watch?v=83-kQ4QO4h0
 
 [tuyensinh247.com]
 match = -218.8%%
@@ -42,9 +42,9 @@ title = KẾT QUẢ CHỌN TẠO GIỐNG LẠC CHỊU MẶN LDH.09 ...
 url = https://asisov.org.vn/cay-thuc-pham/ket-qua-chon-tao-giong-lac-chiu-man-ldh-09-cho-vung-duyen-hai-nam-trung-bo-400.html
 
 [shopee.vn]
-match = 31.2%%
-title = Chiếu lác màu xuất khấu
-url = https://shopee.vn/Chiếu-lác-màu-xuất-khấu-i.275355238.5749616844
+match = -43.8%%
+title = Chiếu lác màu xuất khẩu bao dày đẹp
+url = https://shopee.vn/Chiếu-lác-màu-xuất-khẩu-bao-dày-đẹp-i.821808889.16482308101
 
 [www.thegioididong.com]
 match = -193.8%%
@@ -122,9 +122,9 @@ title = Con lắc đơn chiều dài l = 0,5 (m), m = 100 gam dao động ở ..
 url = https://moon.vn/hoi-dap/con-lac-don-chieu-dai-l-05-m-m-100-gam-dao-dong-o-noi-co-g-98-ms2-voi-bien-do-goc-ba-679117
 
 [m.facebook.com]
-match = -87.5%%
-title = 14. The Hours of My Life (2014) - 8.5
-url = https://m.facebook.com/groups/maybewatchmovie/posts/1588585001748105/
+match = -237.5%%
+title = Hà Nội Riviu - Riviu.vn | | Mùa thu Hà Nội là phải có được ...
+url = https://m.facebook.com/groups/Thanhriviu.Hanoi/posts/1469374767059588/
 
 [dangcongsan.vn]
 match = -231.2%%
@@ -147,9 +147,9 @@ title = iPhone - Apple (VN)
 url = https://www.apple.com/vn/iphone/
 
 [hcmcpv.org.vn]
-match = -193.8%%
-title = Câu lạc bộ Truyền thống kháng chiến TPHCM - Khối Nhà ...
-url = https://hcmcpv.org.vn/tin-tuc/cau-lac-bo-truyen-thong-khang-chien-tphcm-khoi-nha-bao-cao-tuoi-hop-mat-ky-niem-99-nam-ngay-bao-ch-1491923804
+match = -162.5%%
+title = Phát động Giải thưởng “Doanh nhân trẻ xuất sắc ...
+url = https://hcmcpv.org.vn/tin-tuc/phat-dong-giai-thuong-doanh-nhan-tre-xuat-sac-tphcm-lan-thu-12-1491925651
 
 [www.asisov.org.vn]
 match = -125.0%%
@@ -500,4 +500,9 @@ url = https://pandora.norbreeze.vn/pages/size-guide-1
 match = -206.2%%
 title = Trên tay Wanbo Dali 2024: Máy chiếu mini nhỏ gọn, hình ...
 url = https://cellphones.com.vn/sforum/tren-tay-may-chieu-mini-wanbo-dali-2024
+
+[www.vietnamplus.vn]
+match = -200.0%%
+title = Lai Châu: Sạt lở làm nhiều xã biên giới bị chia cắt tạm thời
+url = https://www.vietnamplus.vn/lai-chau-sat-lo-lam-nhieu-xa-bien-gioi-bi-chia-cat-tam-thoi-post968135.vnp
 
