--- a/images/man-in-hoa-dep-16/config.ini
+++ b/images/man-in-hoa-dep-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/man-in-hoa-dep-16.html
 lastopen = 2024-06-10 01:11:01
 
 [search]
-lastsearch = 2024-08-01 15:56:10
+lastsearch = 2024-08-01 16:36:08
 
 [www.tiktok.com]
 match = -170.6%%
@@ -67,9 +67,9 @@ title = Chiêm ngưỡng mùa hoa cực đẹp ở Hà Giang vào tháng 03
 url = https://www.pinterest.com/pin/1087971222468991265/
 
 [books.google.com]
-match = -164.7%%
-title = Hart's Annual Army List, Special Reserve List, and ...
-url = https://books.google.com/books?id=JkREAQAAMAAJ&pg=PA1459&lpg=PA1459&dq=man+in+hoa+dep+16&source=bl&ots=WekvOytLkj&sig=ACfU3U3jhx8B0rENXrjs9krsKkFLRzWseA&hl=en&sa=X&ved=2ahUKEwit8MOOttOHAxUDEmIAHR7GC3wQ6AF6BAgYEAM
+match = -229.4%%
+title = Lexicon Palaeslovenico-Græco-Latinum emendatum auctum edidit ...
+url = https://books.google.com/books?id=QBJhAAAAcAAJ&pg=PA10&lpg=PA10&dq=man+in+hoa+dep+16&source=bl&ots=rtyV4AdmRm&sig=ACfU3U2Q95HRCzZu0NPeYnyH1Kf9eSyt7A&hl=en&sa=X&ved=2ahUKEwjp6oyGv9OHAxVeLdAFHa5bMQoQ6AF6BAgbEAM
 
 [tax.vermont.gov]
 match = -29.4%%
