--- a/images/nem-everon-120x200x9/config.ini
+++ b/images/nem-everon-120x200x9/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-120x200x9.html
 lastopen = 2024-06-06 17:09:43
 
 [search]
-lastsearch = 2024-08-01 14:15:11
+lastsearch = 2024-08-01 16:35:28
 
 [www.everonvn.vn]
 match = 20.0%%
@@ -145,4 +145,9 @@ url = https://vuanem.com/brand/everon
 match = -20.0%%
 title = Đệm bông ép everon hàn quốc vỏ gấm
 url = https://www.khodemthanhdo.com/products/dem-bong-ep-everon-han-quoc-vo-gam
+
+[everon365.com]
+match = -85.0%%
+title = Đệm bông ép Everon Hàn Quốc chính hãng giá tốt!
+url = https://everon365.com/dem-bong-ep-everon-han-quoc/
 
