--- a/images/tham-ni-xop-go-60/config.ini
+++ b/images/tham-ni-xop-go-60/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ni-xop-go-60.html
 lastopen = 2024-06-07 00:35:25
 
 [search]
-lastsearch = 2024-08-01 13:55:37
+lastsearch = 2024-08-01 16:40:43
 
 [xoptraisan.info]
 match = -64.7%%
@@ -32,9 +32,9 @@ title = Thảm nỉ ghép trản sàn nhà Tường Lâm cao cấp - Lombomshop!
 url = https://lombom.com/tham-ni-ghep-san-nha/
 
 [trieuchau.com]
-match = -105.9%%
-title = 40*40*10 tấm - Thảm xốp trải sàn vân gỗ Âu Lạc
-url = https://trieuchau.com/vi-vn/1057/28075/Tham-Xop-40x40cm/404010-tam--Tham-xop-trai-san-van-go-Au-Lac
+match = -129.4%%
+title = Thảm Trải Lót Sàn, Sàn Nhựa Giả Gỗ, Thảm Nhựa TPHCM
+url = https://trieuchau.com/
 
 [www.facebook.com]
 match = 0.0%%
@@ -187,7 +187,7 @@ title = Lhagang Choyu Wordlist with the Thamkhas Dialect of ...
 url = https://core.ac.uk/download/pdf/154886317.pdf
 
 [m.facebook.com]
-match = -117.6%%
-title = THẢM XỐP TRẢI SÀN - xốp ghép vân khế Tường Lâm, ...
-url = https://m.facebook.com/xoplotsan/photos/xốp-ghép-vân-khế-tường-lâm-bịch-8-tấm-mỗi-tấm-60-x-60cm-khoảng-288m21bi/724212804350897/
+match = -129.4%%
+title = THẢM XỐP TRẢI SÀN - Xốp nỉ ghép kẻ Tường Lâm bịch ...
+url = https://m.facebook.com/xoplotsan/photos/xốp-nỉ-ghép-kẻ-tường-lâm-bịch-16-tấm-mỗi-tấm-kích-thước-50-x-50cm-kho/724212907684220/
 
