--- a/images/chan-4-kg-mao-tan/config.ini
+++ b/images/chan-4-kg-mao-tan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-4-kg-mao-tan.html
 lastopen = 2024-06-09 21:36:01
 
 [search]
-lastsearch = 2024-08-01 10:31:35
+lastsearch = 2024-08-01 16:42:52
 
 [www.facebook.com]
 match = -141.2%%
@@ -14,12 +14,12 @@ url = https://www.facebook.com/newageparents/posts/mom-asked-have-anyone-heard-o
 [www.teadrunk.com]
 match = -100.0%%
 title = Buy Chan Cha Red Tea | Chinese Loose Leaf Tea
-url = https://www.teadrunk.com/products/red-tea-chan-cha?srsltid=AfmBOorYGDx2aDgzPRU9dupqGrbBkSTbxJx2nhMkIUFJl6ceA4UlzYiB
+url = https://www.teadrunk.com/products/red-tea-chan-cha
 
 [www.diepxuan.com]
 match = 5.9%%
 title = Chăn Mao Tân 4kg - Điệp Xuân
-url = https://www.diepxuan.com/chan-mao-tan-4kg.html?srsltid=AfmBOoo2U0sAxOfo4P0vPqYHlnF-yWrzUuIHLU4a03fcZ65bV9QKjQIv
+url = https://www.diepxuan.com/chan-mao-tan-4kg.html
 
 [m.facebook.com]
 match = -194.1%%
@@ -142,9 +142,9 @@ title = Pardis Sabeti
 url = https://www.sabetilab.org/pardissabeti/
 
 [www.ncbi.nlm.nih.gov]
-match = -200.0%%
-title = Seeing the unseen of Chinese herbal medicine processing ...
-url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5773022/
+match = -152.9%%
+title = Wen Dan Tang: A Potential Jing Fang Decoction for ...
+url = https://www.ncbi.nlm.nih.gov/pmc/articles/PMC8955743/
 
 [books.google.com]
 match = -7.7%%
