--- a/images/chan-hoi-dior/config.ini
+++ b/images/chan-hoi-dior/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chan-hoi-dior.html
 lastopen = 2024-06-09 23:37:49
 
 [search]
-lastsearch = 2024-08-01 01:47:55
+lastsearch = 2024-08-01 16:43:34
 
 [www.instagram.com]
-match = -161.5%%
-title = (@katrinacyt) • Instagram photos and videos
-url = https://www.instagram.com/katrinacyt/
+match = -92.3%%
+title = Hoi Chan (@hoichandraws) - Instagram
+url = https://www.instagram.com/hoichandraws/?hl=en
 
 [hk.linkedin.com]
 match = -276.9%%
@@ -17,9 +17,9 @@ title = Chow hoi ting Chow - Christian Dior高級時裝公司
 url = https://hk.linkedin.com/in/chow-hoi-ting-chow-a319a2243
 
 [wwd.com]
-match = -253.8%%
-title = Balenciaga's Beats, Tommy's New Face, Dior Taps Quenard
-url = https://wwd.com/fashion-news/fashion-scoops/balenciaga-hilfiger-quenard-canada-goose-idris-1235943664/
+match = -184.6%%
+title = Kimbee Chan Furthers Creative Pursuit With ...
+url = https://wwd.com/fashion-news/fashion-scoops/kimbee-chan-knitwear-workshop-happy-yarn-1235938455/
 
 [vote.umich.edu]
 match = -253.8%%
