--- a/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
+++ b/images/nem-caosu-dreamland-uc-160x200x10-xuat-khau/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-caosu-dreamland-uc-160x200x10-xuat-khau.html
 lastopen = 2024-06-07 00:26:46
 
 [search]
-lastsearch = 2024-08-01 10:45:32
+lastsearch = 2024-08-01 16:39:17
 
 [demdreamland.vn]
 match = 25.6%%
@@ -12,9 +12,9 @@ title = Đệm cao su nhập khẩu Dreamland Natural Latex
 url = https://demdreamland.vn/dem-cao-su-nhap-khau-dreamland-natural-latex/
 
 [demxanh.com]
-match = 18.6%%
-title = Đệm cao su Kim Cương xuất khẩu PRINCESS GOLD áo gấm
-url = https://demxanh.com/dem-cao-su-kim-cuong-xuat-khau-princess-gold.html
+match = 46.5%%
+title = Đệm cao su Dreamland Natural Latex chính hãng
+url = https://demxanh.com/dem-cao-su-dreamland-natural-latex.html
 
 [www.diepxuan.com]
 match = -277.8%%
