--- a/images/ruot-goi-ke-warmdream-50x70/config.ini
+++ b/images/ruot-goi-ke-warmdream-50x70/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-goi-ke-warmdream-50x70.html
 lastopen = 2024-07-01 12:33:15
 
 [search]
-lastsearch = 2024-08-01 15:40:48
+lastsearch = 2024-08-01 16:30:57
 
 [shope.io.vn]
 match = -59.3%%
@@ -14,7 +14,7 @@ url = https://shope.io.vn/ruot-goi-dau-hoa-tiet-ke-vanda-bong-gon-cao-cap-mau-ho
 [www.diepxuan.com]
 match = 29.6%%
 title = Ruột gối kê WDR lông vũ - Điệp Xuân
-url = https://www.diepxuan.com/ruot-goi-ke-wdr-long-vu.html
+url = https://www.diepxuan.com/ruot-goi-ke-wdr-long-vu.html?srsltid=AfmBOoo2hKiqV3UMqAOnpiAz1YbHh8jY6dPG2vzz2_kNlp31zDWuJgb5
 
 [giasale.com]
 match = -59.3%%
