--- a/images/tham-giuong-ii-150x190/config.ini
+++ b/images/tham-giuong-ii-150x190/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/tham-giuong-ii-150x190.html
 lastopen = 2024-06-17 14:26:11
 
 [search]
-lastsearch = 2024-08-01 15:46:17
+lastsearch = 2024-08-01 16:40:22
 
 [demxanh.com]
-match = 0.0%%
-title = Thảm trải giường cao su non màu ghi
-url = https://demxanh.com/tham-trai-giuong-cao-su-non-mau-ghi.html
+match = -45.5%%
+title = Thanh lý thảm trải giường lông cừu giá cực rẻ
+url = https://demxanh.com/tham-trai-giuong-long-cuu-tlc-07.html
 
 [demre.com.vn]
-match = 75.0%%
-title = Thảm lông xù 150x190
-url = https://demre.com.vn/tham-long-xu-150x190-2
+match = 18.2%%
+title = Thảm ghế thảm giường - Trang 4
+url = https://demre.com.vn/tham-ghe-tham-giuong?sortby=created-desc&page=4
 
 [decoviet.vn]
-match = 23.8%%
-title = Thảm Sofa Phòng Khách
-url = https://decoviet.vn/tham-phong-khach/
+match = 22.2%%
+title = Thảm Sofa Biên Hòa
+url = https://decoviet.vn/tham-sofa-bien-hoa/
 
 [demolympia.com]
 match = -40.9%%
@@ -27,8 +27,8 @@ title = Ga chống thấm Olympia cotton cao cấp mới
 url = https://demolympia.com/ga-chong-tham-olympia-cotton-cao-cap-moi/
 
 [thegioidemonline.vn]
-match = -109.1%%
-title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội - Chăn ga gối
+match = -50.0%%
+title = Thảm trải giường lông cừu TLC04 giá rẻ - Hà Nội
 url = https://thegioidemonline.vn/tham-trai-giuong-long-cuu-tlc-04.html
 
 [ru9.vn]
