--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-01 08:06:18
+lastsearch = 2024-08-01 16:37:13
 
 [ninhouse.vn]
-match = -161.5%%
-title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
+match = -246.2%%
+title = Áo gối | Bao gối đẹp giá rẻ NIN House cao cấp tại Tphcm
 url = https://ninhouse.vn/collections/vo-goi
 
 [www.lamido.vn]
@@ -83,7 +83,7 @@ url = https://en.bab.la/dictionary/vietnamese-english/
 
 [shopee.vn]
 match = -153.8%%
-title = vỏ gối kê cổ giá tốt Tháng 7, 2024 | Mua ngay
+title = vỏ gối kê cổ giá tốt Tháng 8, 2024 | Mua ngay
 url = https://shopee.vn/search?keyword=vỏ gối kê cổ&urlold=tron-bo-vo-chan-ga-goi-poly-cottong-ke-ban-co-1m2x2m-them-vo-goi-om/5956463448930783855/2642071820174507179/ 
 
 [songhong.info]
