CI images update

--- a/images/chieu-gap-dai-loan-16/config.ini
+++ b/images/chieu-gap-dai-loan-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-16.html
 lastopen = 2024-06-09 21:46:43
 
 [search]
-lastsearch = 2024-08-01 11:40:21
+lastsearch = 2024-08-01 16:51:43
 
 [www.diepxuan.com]
 match = 19.0%%
@@ -152,9 +152,9 @@ title = Tour Đài Loan 5N4Đ (KH: 16/08/2024)
 url = https://vietsuntravel.com/products/tour-dai-loan-5n4d-kh-16-08-2024
 
 [znews.vn]
-match = -66.7%%
-title = tong thong trump dien dam voi lanh dao dai loan
-url = https://znews.vn/tổng-thống-trump-điện-đàm-với-lãnh-đạo-đài-loan-tin-tuc.html
+match = -138.1%%
+title = Tin tức tức online 24h về u23 việt nam 1 0 u23 đài loan trung quốc
+url = https://znews.vn/u23-việt-nam-1-0-u23-đài-loan-(trung-quốc)-tin-tuc.html
 
 [113.165.166.110:81]
 match = -81.0%%
@@ -220,4 +220,19 @@ url = https://www.instagram.com/cgvcinemasvietnam/p/C4t4MP-BIW_/
 match = -100.0%%
 title = Đài Loan: tin tức, hình ảnh, video, bình luận mới nhất
 url = https://thanhnien.vn/dai-loan-tags491767.html
+
+[www.lazada.vn]
+match = -100.0%%
+title = [HCM][sale hot]Xe đẩy nhập khẩu Đài Loan. Xe đẩy em bé ...
+url = https://www.lazada.vn/products/hcmsale-hotxe-day-nhap-khau-dai-loan-xe-day-em-be-2-chieu-gap-gon-da-chuc-nang-xe-day-9916f-an-toan-thoai-mai-cho-be-i1897106412.html
+
+[olm.vn]
+match = -128.6%%
+title = Mot manh dat hinh chu nhat co chu vi 388m chieu dai gap ...
+url = https://olm.vn/cau-hoi/mot-manh-dat-hinh-chu-nhat-co-chu-vi-388m-chieu-dai-gap-3-loan-chieu-rong-tren-dat-do-nguoi-at-dung-25-trong-hoa-tinh-dien-tich-manh-dattinh-dien-t.46376327076
+
+[sabomall.com]
+match = -133.3%%
+title = https://m.sabomall.com/sitemap/category/phukiencongnghe/3
+url = https://sabomall.com/sitemap/category/phukiencongnghe/3
 
