--- a/images/ruot-nem-korea-9f-16-20/config.ini
+++ b/images/ruot-nem-korea-9f-16-20/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-16-20.html
 lastopen = 2024-06-10 00:40:18
 
 [search]
-lastsearch = 2024-08-01 06:46:51
+lastsearch = 2024-08-01 16:45:58
 
 [www.reddit.com]
 match = -82.6%%
@@ -97,9 +97,9 @@ title = Amazon reinvents the etail wheel
 url = https://www.ft.com/content/b93a8683-6a9b-365a-aba7-d771407db26b
 
 [www.tiktok.com]
-match = -117.4%%
-title = Its 🍓strawberry season! Ft strawberry sago #sago #dessert ...
-url = https://www.tiktok.com/@pete_eats/video/7242653470434807086
+match = -104.3%%
+title = the #leaguecosplay in Seoul is unmatched 🔥 #worlds2023 ...
+url = https://www.tiktok.com/@leagueoflegends/video/7302634740094438686?lang=en
 
 [www.foodandwine.com]
 match = -4.3%%
