--- a/images/bo-ga-goi-chun-xoa-16/config.ini
+++ b/images/bo-ga-goi-chun-xoa-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-chun-xoa-16.html
 lastopen = 2024-06-09 23:12:29
 
 [search]
-lastsearch = 2024-08-01 15:40:07
+lastsearch = 2024-08-01 16:55:25
 
 [hanvico.com.vn]
 match = 28.6%%
@@ -22,14 +22,14 @@ title = Bộ ga gối chun Olympia chần vải Cotton Hàn 16
 url = https://demxanh.com/bo-ga-goi-chun-olympia-chan-vai-cotton-han-16.html
 
 [foreverbedding.net]
-match = -57.1%%
-title = Bộ ga chun chần mặt Velina V16 - Forever Bedding
-url = https://foreverbedding.net/bo-ga-chun-chan-mat-velina-v16
+match = -33.3%%
+title = Bộ ga chun Velina V16 - Forever Bedding
+url = https://foreverbedding.net/bo-ga-chun-velina-v16
 
 [changagoidemsonghong.com]
-match = -104.8%%
-title = Mẫu chăn ga gối trẻ em TE19 08 cotton Sông Hồng Sale -30%%
-url = https://changagoidemsonghong.com/chan-ga-goi-te19-08
+match = -19.0%%
+title = Chăn ga gối 100%% cotton mã mầu BC22-060
+url = https://changagoidemsonghong.com/chan-ga-goi-bc60
 
 [everonletrongtan.com]
 match = 19.0%%
