--- a/images/chieu-dieu-hoa-cao-su-120x190/config.ini
+++ b/images/chieu-dieu-hoa-cao-su-120x190/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/chieu-dieu-hoa-cao-su-120x190.html
 lastopen = 2024-06-06 16:55:18
 
 [search]
-lastsearch = 2024-08-01 14:58:10
+lastsearch = 2024-08-01 16:46:59
 
 [demxanh.com]
 match = 34.5%%
 title = Chiếu điều hòa cao su non Tencel xanh nhạt
-url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
+url = https://demxanh.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOop0HydiwlhdwE43bYEmKefBc82PI02gDWCah3QeIw7fpwfnFEGu
 
 [entershopping.vn]
 match = -13.8%%
@@ -22,19 +22,19 @@ title = [RẺ NHẤT] Chiều điều hòa cao su non Latex mẫu mới siêu ..
 url = https://demchinhhang.com/collections/chieu-dieu-hoa-cao-su-non
 
 [thegioichieutruc.com]
-match = -31.0%%
-title = Chiếu điều hòa cao su non Tencel xanh ngọc chính hãng giá tốt
-url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-ngoc/
+match = -34.5%%
+title = Chiếu điều hòa cao su non Tencel hồng nhạt chính hãng giá tốt
+url = https://thegioichieutruc.com/chieu-dieu-hoa-cao-su-non-tencel-hong-nhat/
 
 [changagoidemdep.vn]
 match = -27.6%%
-title = Chiếu điều hòa cao su non Tencel hồng đất - Chăn ga gối đệm
-url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-hong-dat.html
+title = Chiếu điều hòa cao su non Tencel Xanh nhạt - Chăn ga gối đệm
+url = https://changagoidemdep.vn/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html
 
 [thegioidemonline.com]
 match = 34.5%%
-title = Chiếu điều hòa cao su non Tencel Xanh biển
-url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-bien.html
+title = Chiếu điều hòa cao su non Tencel Xanh nhạt
+url = https://thegioidemonline.com/chieu-dieu-hoa-cao-su-non-tencel-xanh-nhat.html?srsltid=AfmBOorVq9LVoQL32dhqwH8yfcTkl9yqz7BCglpqXF1167YPEg484cgT
 
 [khodem.vn]
 match = 55.2%%
