--- a/images/chieu-truc-thai-den15/config.ini
+++ b/images/chieu-truc-thai-den15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-thai-den15.html
 lastopen = 2024-06-07 00:18:02
 
 [search]
-lastsearch = 2024-08-01 15:36:28
+lastsearch = 2024-08-01 16:49:41
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -24,12 +24,12 @@ url = https://shopee.vn/-Hàng-chuẩn-Chiếu-trúc-Thái-Lan-hạt-vàng-1m5-1
 [demxanh.com]
 match = 14.3%%
 title = Chiếu Trúc cao cấp hạt Đen - Hà Nội
-url = https://demxanh.com/chieu-truc-den.html?srsltid=AfmBOor5cDGARJ8lT0VNwcLNcgkw6yW_0jOp6L6s9DSpKhRIAeq7UupV
+url = https://demxanh.com/chieu-truc-den.html
 
 [www.lazada.vn]
 match = -85.7%%
 title = Chiếu Trúc Thái Lan Giá Tốt T07/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chieu-truc-thai-lan/?srsltid=AfmBOoo9PMp0Rw4Qam6lsvdVjYVa8yM3618HvlwHR6E_LW4IPp8FNRha
+url = https://www.lazada.vn/tag/chieu-truc-thai-lan/
 
 [chieutruc.info]
 match = -71.4%%
