CI images update

--- a/images/chieu-truc-lieu-chau-16/config.ini
+++ b/images/chieu-truc-lieu-chau-16/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-truc-lieu-chau-16.html
 lastopen = 2024-06-07 00:19:53
 
 [search]
-lastsearch = 2024-08-01 15:56:54
+lastsearch = 2024-08-01 17:27:39
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -24,7 +24,7 @@ url = https://chieutrelanlan.com/tim-hieu-ve-chieu-truc-n20.html
 [demxanh.com]
 match = -87.0%%
 title = Tư vấn mua chiếu trúc thanh chính hãng, giá rẻ tại Đệm Xanh
-url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html?srsltid=AfmBOor7TBm_gailpKp_DNO-7835c5uhhIlvR-63Bf7Pr9P28T8vLJmo
+url = https://demxanh.com/tu-van-mua-chieu-truc-thanh-chinh-hang-gia-re-tai-dem-xanh.html
 
 [www.dienmayxanh.com]
 match = -73.9%%
@@ -480,4 +480,9 @@ url = https://www.vietnam.vn/en/btc-miss-grand-vietnam-xin-loi-thi-sinh-chao-dao
 match = -21.4%%
 title = Thông tin Visa
 url = https://www.vfsglobal.com/one-pager/germany/vietnam/vietnamese/
+
+[xaydungchinhsach.chinhphu.vn]
+match = -26.1%%
+title = Khởi tố, bắt tạm giam nữ Công chứng viên
+url = https://xaydungchinhsach.chinhphu.vn/khoi-to-bat-tam-giam-nu-cong-chung-vien-119240731132052824.htm
 
