--- a/images/chan-hoi-re-chan-phao/config.ini
+++ b/images/chan-hoi-re-chan-phao/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-hoi-re-chan-phao.html
 lastopen = 2024-06-09 22:50:47
 
 [search]
-lastsearch = 2024-08-01 12:49:48
+lastsearch = 2024-08-01 17:25:33
 
 [www.dem365.vn]
 match = -61.9%%
@@ -82,9 +82,9 @@ title = làm trục câu đơn câu đài cao cấp,hạt chặn,chân cắm pha
 url = https://docauchinhhang.vn/hop-phu-kien-cau-dai-lam-truc-cau-don-cau-dai-cao-caphat-chanchan-cam-phao-aa81
 
 [vuadocau.com]
-match = 9.5%%
-title = Bộ 5 chân phao câu đài cao cấp
-url = https://vuadocau.com/bo-5-chan-phao-cau-dai-cao-cap/
+match = -81.0%%
+title = Bộ 5 Chân Cắm Phao Câu Đài Cao Cấp Silicon Chống Xoắn
+url = https://vuadocau.com/bo-5-chan-cam-phao-cau-dai-cao-cap-silicon-chong-xoan/
 
 [m.facebook.com]
 match = 19.0%%
