--- a/images/chieu-cay-dai-loan-vien-da15/config.ini
+++ b/images/chieu-cay-dai-loan-vien-da15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-vien-da15.html
 lastopen = 2024-06-09 23:43:35
 
 [search]
-lastsearch = 2024-08-01 11:29:13
+lastsearch = 2024-08-01 17:22:09
 
 [www.diepxuan.com]
 match = 65.4%%
@@ -13,8 +13,8 @@ url = https://www.diepxuan.com/chieu-cay-dai-loan-140x190.html
 
 [www.vinmec.com]
 match = -35.7%%
-title = Một vài tác dụng phụ của chiếu đèn vàng da sơ sinh
-url = https://www.vinmec.com/vie/bai-viet/mot-vai-tac-dung-phu-cua-chieu-den-vang-da-so-sinh-vi
+title = Chiếu đèn điều trị vàng da sơ sinh ở trẻ trong bao lâu?
+url = https://www.vinmec.com/vie/bai-viet/chieu-den-dieu-tri-vang-da-so-sinh-o-tre-trong-bao-lau-vi
 
 [www.hotdeal.vn]
 match = -25.0%%
@@ -92,9 +92,9 @@ title = Vistar Pharmacy - Phạm Văn Chiêu - Giao nhanh trong 1 giờ
 url = https://med.loship.vn/vistarpharmacyphamvanchieu
 
 [medlatec.vn]
-match = 0.0%%
-title = 
-url = https://medlatec.vn/tu-dien-benh-ly/san-day-sbfou
+match = -25.0%%
+title = 5 cách trị thâm mông đơn giản mà hiệu quả tại nhà
+url = https://medlatec.vn/tin-tuc/5-cach-tri-tham-mong-don-gian-ma-hieu-qua-tai-nha
 
 [www.merckmillipore.com]
 match = 27.3%%
