--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-01 16:18:14
+lastsearch = 2024-08-01 17:15:15
 
 [scholar.google.com]
 match = -43.8%%
@@ -32,9 +32,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [moveek.com]
-match = -175.0%%
-title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/cinestar-kien-giang/
+match = -143.8%%
+title = Rạp Lotte Cantavil - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/lotte-cinema-cantavil/
 
 [nhandan.vn]
 match = -62.5%%
@@ -47,9 +47,9 @@ title = Khám phá làng nghề làm chiếu Long Cang truyền thống
 url = https://laodongtre.laodong.vn/doi-song/kham-pha-lang-nghe-lam-chieu-long-cang-truyen-thong-1277659.ldo
 
 [www.vinmec.com]
-match = -81.2%%
-title = Chiều cao, cân nặng bé trai 18 tháng tuổi
-url = https://www.vinmec.com/vie/bai-viet/chieu-cao-can-nang-be-trai-18-thang-tuoi-vi/
+match = -75.0%%
+title = Chiều cao, cân nặng bé gái 18 tháng tuổi
+url = https://www.vinmec.com/vie/bai-viet/chieu-cao-can-nang-be-gai-18-thang-tuoi-vi/
 
 [www.bachhoaxanh.com]
 match = -218.8%%
@@ -112,9 +112,9 @@ title = Giá vàng 9999 hôm nay tại 64 tỉnh 1/8/2024 | Bảng giá vàng
 url = https://primagold.com.vn/
 
 [www.youtube.com]
-match = -243.8%%
-title = Ngôi làng toàn “người khổng lồ” ở Việt Nam cực ít người biết ...
-url = https://www.youtube.com/watch?v=6u1GU8_6GQI
+match = -212.5%%
+title = Giá vàng hôm nay 16/12 | Vàng nữ trang 24K và 18K tăng ...
+url = https://www.youtube.com/watch?v=dn30Sg_9U3w
 
 [books.google.com]
 match = -156.2%%
