--- a/images/ga-phu-es1804-160x200/config.ini
+++ b/images/ga-phu-es1804-160x200/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/ga-phu-es1804-160x200.html
 lastopen = 2024-07-01 16:45:20
 
 [search]
-lastsearch = 2024-08-01 13:48:25
+lastsearch = 2024-08-01 17:22:28
 
 [everonvn.com.vn]
 match = -133.3%%
 title = Bảng giá bán bộ chăn ga gối Everon Es1807 - Serenity màu ...
-url = https://everonvn.com.vn/everon/611/bo-everon-es1807
+url = https://everonvn.com.vn/everon/611/bo-everon-es1807?srsltid=AfmBOor_K-4MhmGTXO-wr-Bp1ie39mfDw42N4-QLa9kbHKtoDnv_lZJv
 
 [www.everonqb.com]
 match = -66.7%%
