--- a/images/giuong-mn-1/config.ini
+++ b/images/giuong-mn-1/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/giuong-mn-1.html
 lastopen = 2024-06-07 00:35:37
 
 [search]
-lastsearch = 2024-08-01 14:34:19
+lastsearch = 2024-08-01 17:16:40
 
 [phana.com.vn]
-match = 63.6%%
-title = Giường bệnh
-url = https://phana.com.vn/giuong-benh
+match = -90.9%%
+title = MN-G1-Giường 1 tay quay có bô
+url = https://phana.com.vn/mn-g1-giuong-1-tay-quay-co-bo
 
 [tiki.vn]
 match = -190.9%%
@@ -37,9 +37,9 @@ title = Giường ngủ gỗ xoan 1,6m(Nệm 1,6m x2m)
 url = http://noithatdogodungduyen.com/giuong-ngu-1
 
 [shopee.vn]
-match = -90.9%%
-title = Giường ngủ với ba mẹ 1m3 loại 1
-url = https://shopee.vn/Giường-ngủ-với-ba-mẹ-1m3-loại-1-i.13765237.409647830
+match = -263.6%%
+title = Giường 1m2 - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/giường/1m2
 
 [dogodelathanhhanoi.com]
 match = -245.5%%
@@ -54,7 +54,7 @@ url = https://hungnamphat.com.vn/giuong-gap-nhap-khau-nhat-ban-otb-mn/
 [www.lazada.vn]
 match = -263.6%%
 title = Giường 1 M 6 Giá Tốt T04/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/giuong-1-m-6/?innerlink=hot_v1&srsltid=AfmBOopuXAVA5zdf60ZnUdC-z6RGaSin34XiJ6UNOh-yuE3hY5UmSyJm
+url = https://www.lazada.vn/tag/giuong-1-m-6/?innerlink=hot_v1
 
 [hoaphatsaigon.com]
 match = -272.7%%
