--- a/images/man-tu-bung-tre-em/config.ini
+++ b/images/man-tu-bung-tre-em/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/man-tu-bung-tre-em.html
 lastopen = 2024-06-07 00:52:30
 
 [search]
-lastsearch = 2024-08-01 16:58:29
+lastsearch = 2024-08-01 17:29:44
 
 [www.mantubung.com]
-match = -100.0%%
-title = Màn trẻ em tự bung chống muỗi đa năng 80cm * 100cm
-url = https://www.mantubung.com/man-tre-em-tu-bung-chong-muoi-da-nang-84845.html
+match = -138.9%%
+title = Mùng Chụp | Màn Tự Bung Thông Minh Chống Muỗi | Khuyến ...
+url = https://www.mantubung.com/
 
 [manbinhminh.com]
 match = -144.4%%
@@ -17,9 +17,9 @@ title = Màn chống muỗi cho bé gấp gọn dễ dàng bao quản, mùng ...
 url = https://manbinhminh.com/2509/man-chong-muoi-cho-be-gap-gon-de-dang-bao-quan-mung-chup-tu-bung.aspx
 
 [shopee.vn]
-match = -33.3%%
-title = Màn Mùng chụp tự bung cho em bé sơ sinh
-url = https://shopee.vn/Màn-Mùng-chụp-tự-bung-cho-em-bé-sơ-sinh-Mùng-xếp-gấp-gọn-cho-bé-trẻ-em-bé-lớn-chống-muỗi-tuyệt-đối-i.236260085.7856510622
+match = -138.9%%
+title = Màn chụp người lớn - Giá Tốt, Miễn Phí Vận Chuyển, Đủ ...
+url = https://shopee.vn/list/màn chụp/người lớn
 
 [h5.lazada.vn]
 match = -33.3%%
@@ -32,14 +32,14 @@ title = màn chụp trẻ em cao cấp
 url = http://manchupcuongan.com/man-chup-tre-em-80-x-120cm.html
 
 [manthutrang.com]
-match = -122.2%%
-title = Màn chụp tự bung cho bé – Những quy tắc sử dụng an ...
-url = https://manthutrang.com/blogs/news/man-chup-tu-bung-cho-be-nhung-quy-tac-su-dung-an-toan-cha-me-can-biet
+match = -127.8%%
+title = Hướng dẫn phân biệt màn tự bung cao cấp và màn nhái ...
+url = https://manthutrang.com/blogs/news/huong-dan-phan-biet-man-tu-bung-cao-cap-va-man-nhai-gia-re
 
 [easydream.vn]
-match = -105.6%%
-title = Mùng Chụp Tự Bung -Màn chụp tự bung [16] - easy dream
-url = https://easydream.vn/mung-chup-tu-bung-man-chup-tu-bung-3-11.html
+match = -61.1%%
+title = mùng chụp tự bung gấp gọn cao cấp easy dream
+url = https://easydream.vn/mung-chup-tu-bung-gap-gon-cao-cap-easy-dream-134-15.html
 
 [www.mungtubung.com]
 match = -116.7%%
@@ -47,9 +47,9 @@ title = Mùng Tự Bung Bảo Lộc 1m8 x 2m Loại 2 Cửa Cao Cấp ...
 url = https://www.mungtubung.com/mung-tu-bung-1m8-loai-2-cua.html
 
 [mungmocmien.com]
-match = -111.1%%
-title = Mùng ngủ em bé ( mùng chụp em bé, mùng nôi em bé...)
-url = https://mungmocmien.com/collections/mung-chup-em-be
+match = -94.4%%
+title = Mùng Chụp Tự Bung Đỉnh Rộng Cao Cấp Mộc Miên XL20
+url = https://mungmocmien.com/products/mung-man-chup-tu-bung-dinh-rong-cao-cap-3-cua-3
 
 [tiki.vn]
 match = -11.1%%
@@ -62,9 +62,9 @@ title = Mùng Tự Bung Cho Bé 70cm x 90Cm
 url = https://mungchup.com/mung-thuyen-tu-bung-cho-be-67008.html
 
 [munghoangphat.com]
-match = -44.4%%
-title = Mùng chụp tự bung trẻ em cao cấp HOÀNG PHÁT
-url = https://munghoangphat.com/mung-chup-tu-bung-tre-em-cao-cap.html
+match = -72.2%%
+title = Mùng chụp tự bung ĐỈNH VUÔNG không viền chân
+url = https://munghoangphat.com/mung-chup-tu-bung-dinh-vuong-khong-vien-chan-vien-hong.html
 
 [ichikobaby.com]
 match = -88.9%%
@@ -110,4 +110,9 @@ url = https://thuedochoi.com/man-chup-tu-bung-1m8-x-2m-p2233.html
 match = -94.4%%
 title = Mùng Chụp Tự Bung BẢO BẢO - Tư vấn: 0904.168.464
 url = https://www.facebook.com/mungchupbaobao/
+
+[m.facebook.com]
+match = -133.3%%
+title = Màn gấp gọn tự bung - mùng chụp chống muỗi cho bé sơ ...
+url = https://m.facebook.com/reel/432901842905883/
 
