--- a/images/tham-giuong-bo-de-14/config.ini
+++ b/images/tham-giuong-bo-de-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/tham-giuong-bo-de-14.html
 lastopen = 2024-06-10 01:25:14
 
 [search]
-lastsearch = 2024-08-01 15:57:35
+lastsearch = 2024-08-01 17:30:27
 
 [erado.vn]
-match = 5.0%%
-title = Giường da hạng sang mã DV14
-url = https://erado.vn/giuong-dang-giam-gia/giuong-da-hang-sang-ma-dv14.html
+match = 0.0%%
+title = Giường ngủ da hạng sang mã 14
+url = https://erado.vn/giuong-dat-theo-yeu-cau/giuong-ngu-da-hang-sang-ma-14.html
 
 [shopee.vn]
-match = -120.0%%
-title = Bộ ga gối trải giường, Bộ ga giường drap nệm, ga chun đủ ...
-url = https://shopee.vn/Bộ-ga-gối-trải-giường-Bộ-ga-giường-drap-nệm-ga-chun-đủ-mọi-kích-cỡ-1m2-1m4-1m6-1m8-2m-2m2-i.483546614.15837908133
+match = -105.0%%
+title = Giường xếp - Giá Tốt, Miễn Phí Vận Chuyển, Đủ Loại
+url = https://shopee.vn/list/giường xếp
 
 [noithatami.com]
 match = -75.0%%
