CI images update

--- a/images/chieu-gap-dai-loan-18/config.ini
+++ b/images/chieu-gap-dai-loan-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-gap-dai-loan-18.html
 lastopen = 2024-06-09 22:42:55
 
 [search]
-lastsearch = 2024-08-01 14:02:47
+lastsearch = 2024-08-01 17:43:59
 
 [tiki.vn]
 match = -47.6%%
@@ -280,4 +280,9 @@ url = https://baotainguyenmoitruong.vn/bao-gaemi-quet-qua-dai-loan-trung-quoc-ho
 match = -100.0%%
 title = Cửa trượt tự động Đài Loan KTH-H18 trọng lượng 900-1000Kg
 url = https://www.cuatudongthuanphat.com/san-pham/cua-truot-tu-dong-dai-loan-kth-h18-trong-luong-900-1000kg-38.html
+
+[thangnhomnhapkhau.com]
+match = -47.6%%
+title = Thang Nhôm Gấp Đài Loan Pal B6-205 Giá Rẻ #1 HN
+url = https://thangnhomnhapkhau.com/thang-nhom-gap-dai-loan-pal-b6-205
 
