--- a/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
+++ b/images/bo-chan-ga-goi-sini-co-hop-2-18/config.ini
@@ -4,22 +4,22 @@ url = https://www.diepxuan.com/bo-chan-ga-goi-sini-co-hop-2-18.html
 lastopen = 2024-06-09 23:47:13
 
 [search]
-lastsearch = 2024-08-01 15:47:14
+lastsearch = 2024-08-01 17:48:34
 
 [chanrathanhthuy.com]
-match = -3.2%%
-title = Bí quyết chọn màu sắc chăn ga gối đệm hợp phong thủy
-url = https://chanrathanhthuy.com/hoat-dong-cong-ty/bi-quyet-chon-mau-sac-chan-ga-goi-dem-hop-phong-thuy-1400.html
+match = 9.7%%
+title = Tổng hợp những bộ chăn ga gối đệm đẹp nhất
+url = https://chanrathanhthuy.com/hoat-dong-cong-ty/tong-hop-nhung-bo-chan-ga-goi-dem-dep-nhat-1484.html
 
 [demxanh.com]
-match = 58.1%%
-title = Bộ chăn ga gối Hanvico LIVING - LV18
-url = https://demxanh.com/bo-chan-ga-goi-hanvico-living-lv18.html?srsltid=AfmBOorLjYWtiqTNZMoRQrNbcSWK8CA9Yi7EmDTIYU7ofWEJlZC7X0ZC
+match = -16.1%%
+title = [HOT 2024] Top 30 mẫu ảnh chăn ga gối Singapore Đế ...
+url = https://demxanh.com/top-30-mau-anh-chan-ga-goi-singapore-de-vuong-tuyet-dep-nam-2020.html
 
 [songhongonline.vn]
-match = 53.8%%
-title = Bộ chăn ga gối SH_UT23 028
-url = https://songhongonline.vn/products/nhan-ban-tu-bo-chan-ga-goi-sh-ut23-032
+match = 50.0%%
+title = Bộ chăn ga gối SH_UC23 035
+url = https://songhongonline.vn/products/bo-chan-ga-goi-sh-uc23-035
 
 [changagoidemsonghong.com]
 match = -29.0%%
@@ -54,7 +54,7 @@ url = https://ru9.vn/blogs/magazine/cac-mau-chan-ga-goi-dem
 [everonvn.com.vn]
 match = -41.9%%
 title = Kích Thước Đệm Everon Tiêu Chuẩn Và Chăn Ga Gối Giường ...
-url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-?srsltid=AfmBOorJlBE6SsI0sq1Hg__zf7vj7d5gKuFKlOc22sXblZ23q3l4anGv
+url = https://everonvn.com.vn/tin-tuc/196/kich-thuoc-giuong-dem-tieu-chuan-va-chan-ga-goi-la-bao-nhieu-
 
 [lizd.vn]
 match = 0.0%%
