--- a/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-180x200-sh/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-180x200-sh.html
 lastopen = 2024-06-07 00:25:35
 
 [search]
-lastsearch = 2024-08-01 15:43:49
+lastsearch = 2024-08-01 17:46:09
 
 [www.diepxuan.com]
 match = 17.6%%
@@ -12,9 +12,9 @@ title = Bộ chăn bốn mùa EPC21053 180x200 - Điệp Xuân
 url = https://www.diepxuan.com/bo-chan-bon-mua-epc21053-180x200.html
 
 [songhongonline.vn]
-match = 0.0%%
-title = Bộ sản phẩm SH_BC22 066
-url = https://songhongonline.vn/products/bo-san-pham-song-hong-sh-bc22-1
+match = 4.3%%
+title = Bộ sản phẩm SH_BC23 080
+url = https://songhongonline.vn/products/bo-san-pham-sh-bc23-87
 
 [everon.online]
 match = 50.0%%
@@ -23,8 +23,8 @@ url = https://everon.online/collections/bo-ga-chun-chan-bon-mua-everon
 
 [antbedding.com]
 match = 23.5%%
-title = Bộ Chăn Ga Gối Tencel Hoàng Gia S20
-url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-s20
+title = Bộ Chăn Ga Gối Tencel Hoàng Gia S21
+url = https://antbedding.com/bo-chan-ga-goi-tencel-hoang-gia-s21
 
 [shopee.vn]
 match = 50.0%%
@@ -84,7 +84,7 @@ url = https://www.everonvni.vn/bo-chan-ga-goi-canh-dong-nang-est24035/
 [aeoneshop.com]
 match = 52.9%%
 title = Bộ Ga Chun Chần Bốn Mùa Everon 180x200cm ESB23022
-url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180x200cm-esb23022?srsltid=AfmBOorCPUp8l4P4DPqrefEjWs8EePiyqmZcpCiTTw2a2iqu-L1kqeQy
+url = https://aeoneshop.com/product/25982/bo-ga-chun-chan-bon-mua-180x200cm-esb23022
 
 [tiki.vn]
 match = 41.2%%
@@ -112,9 +112,9 @@ title = Chăn ga gối Sông Hồng hoạt hình trẻ em | Bộ chăn gối cho
 url = https://changagoidemsonghong.online/chan-ga-goi-hoat-hinh-tre-em.html?brand=1
 
 [everonvn.com.vn]
-match = 20.0%%
-title = Báo giá chăn 4 mùa Everon
-url = https://everonvn.com.vn/everon/582/chan-bon-mua-everon
+match = -23.5%%
+title = Bảng giá bộ chăn ga gối Everon Ep1523 Hàn Quốc màu hoa ...
+url = https://everonvn.com.vn/everon/273/everon-ep-1523
 
 [staging.happynest.com.vn]
 match = -8.8%%
