--- a/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
+++ b/images/bo-ga-goi-phu-mau-xoa-tin-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-goi-phu-mau-xoa-tin-18.html
 lastopen = 2024-06-09 23:46:35
 
 [search]
-lastsearch = 2024-08-01 12:46:22
+lastsearch = 2024-08-01 17:55:07
 
 [www.diepxuan.com]
 match = 3.6%%
@@ -28,8 +28,8 @@ url = https://foreverbedding.net/mau-chan-ga-goi-dem-cotton
 
 [changagoidemsonghong.com]
 match = 17.9%%
-title = Chăn ga gối Home mã H17-048 Sale 30%%
-url = https://changagoidemsonghong.com/chan-ga-goi-home-h17-048
+title = Chăn ga gối Home mã H18-056 Sale 40%%
+url = https://changagoidemsonghong.com/chan-ga-goi-home-h18-056
 
 [flexhouse.vn]
 match = -17.9%%
@@ -52,9 +52,9 @@ title = 27 Bộ Chăn Ga Gối Đệm Phòng Cưới Sang Xịn Mịn Với Giá
 url = https://cuahangchangagoidem.com/chan-ga-goi-dem-phong-cuoi/
 
 [goni.vn]
-match = 14.3%%
-title = Bộ chăn mền ga gối Goni tici màu xám
-url = https://goni.vn/bo-chan-ga-goi-cotton-tici-goni-mau-xam/
+match = 7.1%%
+title = Bộ chăn mền ga gối Goni tici màu cam xám
+url = https://goni.vn/bo-chan-ga-goi-cotton-tici-goni-mau-cam-xam/
 
 [ru9.vn]
 match = -257.1%%
