--- a/images/chieu-lac-d2-12/config.ini
+++ b/images/chieu-lac-d2-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-12.html
 lastopen = 2024-06-21 05:09:22
 
 [search]
-lastsearch = 2024-08-01 16:45:37
+lastsearch = 2024-08-01 17:53:24
 
 [agasound.vn]
 match = 6.7%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 12
 url = https://www.diepxuan.com/chieu-lac-d2-12.html
 
 [shopee.vn]
-match = -146.7%%
-title = bút kèn D212 bút đầu quay dễ thương viết gel
-url = https://shopee.vn/D53-bút-donut-tai-mèo-lúc-lắc-bút-dễ-thương-viết-gel-i.52220670.1799275465
+match = -186.7%%
+title = Trống cajon AB-D2 có tay chỉnh kèm bao dù chống nước
+url = https://shopee.vn/Trống-cajon-AB-D2-có-tay-chỉnh-kèm-bao-dù-chống-nước-Mặt-màu-gỗ-Bảo-hành-1-năm-i.37429989.7833832785
 
 [mngiaquat.longbien.edu.vn]
 match = -213.3%%
