CI images update

--- a/images/chi-u-nh-a-thai-binh-10/config.ini
+++ b/images/chi-u-nh-a-thai-binh-10/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chi-u-nh-a-thai-binh-10.html
 lastopen = 2024-06-09 22:17:45
 
 [search]
-lastsearch = 2024-08-01 12:25:42
+lastsearch = 2024-08-01 18:15:53
 
 [www.vesselfinder.com]
 match = -91.3%%
@@ -182,8 +182,8 @@ title = Search results | Find available job openings at Abbott ...
 url = https://www.jobs.abbott/us/en/search-results
 
 [tbd.edu.vn]
-match = -65.2%%
-title = Trường Đại học Thái Bình Dương – Học từ Trải nghiệm
+match = -21.7%%
+title = Trường Đại học Thái Bình Dương: Home page
 url = https://tbd.edu.vn/
 
 [caodangytb.edu.vn]
@@ -254,7 +254,7 @@ url = https://forevervacation.com/vietnam-travel-guide/vietnam-language
 [vietmytravel.com]
 match = -52.2%%
 title = Hành trình khám phá tour du lịch biển Thái Bình Dương
-url = https://vietmytravel.com/tour/du-lich-bien-thai-binh-duong/
+url = https://vietmytravel.com/tour/du-lich-bien-thai-binh-duong/?srsltid=AfmBOoqJHWFSERCGw5nCvSr9ZoBhChTuIuR4zMpYh8ogcstpzBsfoe9U
 
 [www.ncb-bank.vn]
 match = -13.0%%
@@ -297,9 +297,9 @@ title = }zJ-----
 url = https://storage-vnportal.vnpt.vn/cmu-sgddt/6228/Nam2023/ho-tro-phuc-vu-le-giao-nhan-quan-tpcm-23.pdf
 
 [suckhoedoisong.vn]
-match = -82.6%%
-title = Dạy bù trong ngày nghỉ lễ ở Thái Bình: Hiệu trưởng phải ...
-url = https://suckhoedoisong.vn/hoc-bu-trong-ngay-nghi-le-o-thai-binh-hieu-truong-phai-chiu-trach-nhiem-169240420154135404.htm
+match = -95.7%%
+title = Vụ điểm thi 'bất thường' vào lớp 10 Thái Bình: Tạm đình chỉ ...
+url = https://suckhoedoisong.vn/vu-bat-thuong-diem-thi-vao-lop-10-thai-binh-tam-dinh-chi-giam-doc-so-gddt-169240801113717864.htm
 
 [tuoitrenews.vn]
 match = -82.6%%
@@ -405,4 +405,9 @@ url = https://analyticalsciencejournals.onlinelibrary.wiley.com/doi/abs/10.1002/
 match = -95.7%%
 title = Factors Affecting Loan Loss Provisions of Vietnamese ...
 url = https://link.springer.com/chapter/10.1007/978-3-031-59110-5_21
+
+[kenhthoitiet.edu.vn]
+match = -73.9%%
+title = Dự báo thời tiết Thái Bình hôm nay và ngày mai chính xác
+url = https://kenhthoitiet.edu.vn/thai-binh
 
