--- a/images/ruot-nem-korea-9f-14-19/config.ini
+++ b/images/ruot-nem-korea-9f-14-19/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ruot-nem-korea-9f-14-19.html
 lastopen = 2024-06-10 00:27:45
 
 [search]
-lastsearch = 2024-08-01 06:29:46
+lastsearch = 2024-08-01 18:14:30
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -227,9 +227,9 @@ title = Freedom Shield 24 set to begin
 url = https://www.usfk.mil/Media/Press-Products/Press-Releases/Article/3688893/freedom-shield-24-set-to-begin/
 
 [cryptonews.com]
-match = -108.7%%
-title = WazirX Preliminary Investigation Finds No Evidence of ...
-url = https://cryptonews.com/news/wazirx-preliminary-investigation-finds-no-evidence-of-compromised-signer-machines-in-235m-hack.htm
+match = -87.0%%
+title = South Korean Exchanges to Pay 300M Won Supervisory Fee
+url = https://cryptonews.com/news/south-korean-exchanges-to-pay-300m-won-supervisory-fee.htm
 
 [www.op.gg]
 match = -104.3%%
