--- a/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
+++ b/images/bo-ga-chun-chan-bon-mua-140x200-tr/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/bo-ga-chun-chan-bon-mua-140x200-tr.html
 lastopen = 2024-06-07 00:25:30
 
 [search]
-lastsearch = 2024-08-01 16:17:10
+lastsearch = 2024-08-01 18:16:54
 
 [everon.online]
 match = 50.0%%
@@ -12,9 +12,9 @@ title = Bộ Ga Chun Chần Everon Bốn Mùa ...
 url = https://everon.online/blogs/news/bo-ga-chun-chan-everon-bon-mua-bo-ga-boc-chan-everon-moi-nhat
 
 [www.everonvn.vn]
-match = -32.4%%
-title = Everon EPM-24060 | Bảng giá chi tiết bộ vỏ chăn ga gối ...
-url = https://www.everonvn.vn/chi-tiet/everon-epm24060.html
+match = 14.7%%
+title = Bảng giá chi tiết bộ chăn ga gối mùa hè ESM-22004
+url = https://www.everonvn.vn/chi-tiet/everon-esm22004.html
 
 [nem.vn]
 match = 5.9%%
