--- a/images/chieu-cay-cao-bang-a-14/config.ini
+++ b/images/chieu-cay-cao-bang-a-14/config.ini
@@ -4,17 +4,17 @@ url = https://www.diepxuan.com/chieu-cay-cao-bang-a-14.html
 lastopen = 2024-06-09 23:41:44
 
 [search]
-lastsearch = 2024-08-01 16:54:05
+lastsearch = 2024-08-01 18:14:49
 
 [demxanh.com]
 match = -60.9%%
 title = Cách phân biệt các loại chiếu trúc thanh Cao Bằng Cao Sơn
-url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html
+url = https://demxanh.com/cach-phan-biet-cac-loai-chieu-truc-thanh-cao-bang-cao-son.html?srsltid=AfmBOor6jC5az04WqFD4N5t3UrIpyyoPu7v_M29-uxptNvpn6xbOqPdV
 
 [www.lazada.vn]
 match = 47.8%%
 title = Chiếu Trúc cao bằng 1.4 X 1.95
-url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html
+url = https://www.lazada.vn/products/chieu-truc-cao-bang-14-x-195-i2173944158.html?srsltid=AfmBOoq9kSnFIyfzHv8qEDrv_TIy9xcPZeDe3IfosAJiIOD0HVzXEaFx
 
 [shopee.vn]
 match = -69.6%%
@@ -29,7 +29,7 @@ url = https://lombom.com/chieu-truc-cao-bang-cao-son/
 [www.diepxuan.com]
 match = 21.7%%
 title = Chiếu cây Cao Bằng A 150x190 - Điệp Xuân
-url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html
+url = https://www.diepxuan.com/chieu-cay-cao-bang-a-150x190.html?srsltid=AfmBOoogmZuiCMWkWnaMeJOfh1Ht-HokVkkmsPytxGJA1HErfrDeP4w9
 
 [chieutrucsaigon.com]
 match = -17.4%%
