--- a/images/chieu-lac-gam-12/config.ini
+++ b/images/chieu-lac-gam-12/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-gam-12.html
 lastopen = 2024-06-06 16:54:12
 
 [search]
-lastsearch = 2024-08-01 17:59:20
+lastsearch = 2024-08-01 18:20:37
 
 [www.diepxuan.com]
 match = 62.5%%
@@ -314,7 +314,7 @@ url = https://www.aeon.com.vn/
 [www.lazada.vn]
 match = -143.8%%
 title = Chiếu Lác 1m6 2m Giá Tốt T05/2024 | Mua tại Lazada.vn
-url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/
+url = https://www.lazada.vn/tag/chiếu-lác-1m6-2m/?srsltid=AfmBOooi62i81hetSaB_AYLJmqEhcjPu5rYRqQqfgOYpbsGnWlVxg0gQ
 
 [yato.vn]
 match = -175.0%%
