--- a/images/chieu-lac-soc-18/config.ini
+++ b/images/chieu-lac-soc-18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-soc-18.html
 lastopen = 2024-06-06 16:53:55
 
 [search]
-lastsearch = 2024-08-01 17:15:15
+lastsearch = 2024-08-01 18:23:20
 
 [scholar.google.com]
 match = -43.8%%
@@ -32,9 +32,9 @@ title = Làng nghề dệt chiếu cói Phú Tân
 url = https://mia.vn/cam-nang-du-lich/lang-nghe-det-chieu-coi-phu-tan-lang-nghe-hon-tram-nam-tuoi-tai-phu-yen-2165
 
 [moveek.com]
-match = -143.8%%
-title = Rạp Lotte Cantavil - Lịch chiếu, Giá vé, Ưu đãi
-url = https://moveek.com/rap/lotte-cinema-cantavil/
+match = -175.0%%
+title = Rạp Cinestar Kiên Giang - Lịch chiếu, Giá vé, Ưu đãi
+url = https://moveek.com/rap/cinestar-kien-giang/
 
 [nhandan.vn]
 match = -62.5%%
