--- a/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
+++ b/images/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/nem-lo-xo-everon-kingkoil-160x200x27-cloud-firm.h
 lastopen = 2024-06-30 21:10:28
 
 [search]
-lastsearch = 2024-08-01 17:40:51
+lastsearch = 2024-08-01 18:24:43
 
 [www.everonvn.vn]
-match = 7.4%%
-title = ĐỆM LÒ XO EVERON, KING KOIL
-url = https://www.everonvn.vn/san-pham-everon/dem-lo-xo-everon.html
+match = 31.1%%
+title = Đệm lò xo King Koil Cloud Firm | Giảm giá 20%%
+url = https://www.everonvn.vn/chi-tiet/dem-lo-xo-Cloud-Firm.html
 
 [demxanh.com]
 match = 29.8%%
@@ -52,9 +52,9 @@ title = Nệm everhome TC 15F 16 20 - Điệp Xuân
 url = https://www.diepxuan.com/nem-everhome-tc-15f-16-20.html
 
 [everon.online]
-match = 25.5%%
-title = Bảng Giá Đệm Lò Xo Everon, Đệm Lò Xo Mỹ King Koil ...
-url = https://everon.online/collections/dem-lo-xo-everon
+match = 31.9%%
+title = Đệm Lò Xo King Koil - Bảng Giá Các Sản Phẩm ...
+url = https://everon.online/collections/dem-lo-xo-king-koil
 
 [everonvn.com.vn]
 match = 25.6%%
