--- a/images/tui-nem-korea-tuan-anh-14/config.ini
+++ b/images/tui-nem-korea-tuan-anh-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tui-nem-korea-tuan-anh-14.html
 lastopen = 2024-06-17 10:43:32
 
 [search]
-lastsearch = 2024-08-01 13:43:19
+lastsearch = 2024-08-01 18:25:02
 
 [suongtuyet.com]
 match = 16.0%%
@@ -19,7 +19,7 @@ url = https://tuananh.vn/dem-bong-ep-korea-kaki-p112.html
 [demxanh.com]
 match = -48.0%%
 title = [Cập nhật] Bảng giá đệm bông ép Tuấn Anh khuyến mại ...
-url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html?srsltid=AfmBOor8USVLknV-Zqw1NutDJTEXWtccAVyyPsPecC7ypFeb-41X__hR
+url = https://demxanh.com/bang-gia-dem-bong-ep-tuan-anh-2021.html
 
 [shopee.vn]
 match = -40.0%%
@@ -49,7 +49,7 @@ url = https://dem24h.vn/dem-bong-ep-korea-vai-cotton
 [demviethome.vn]
 match = -4.0%%
 title = Đệm Bông Ép Tuấn Anh 3 Mảnh Korea Gấm
-url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/?srsltid=AfmBOoqcRJorxv9gdt1OzjS6CQlmQ1I1_zh7U7MjyKxCfQXnqh0PZ4qQ
+url = https://demviethome.vn/dem-bong-ep-tuan-anh-3-manh-korea-gam/
 
 [bedding.vn]
 match = -76.0%%
@@ -67,9 +67,9 @@ title = đệm tuấn anh
 url = https://www.demgiare.net/tag/dem-tuan-anh
 
 [sieuthidemonline.vn]
-match = -60.0%%
-title = Đệm Tuấn Anh - thương hiệu đệm hàng đầu tại Việt Nam!
-url = https://sieuthidemonline.vn/dem-tuan-anh/
+match = -24.0%%
+title = Giá khuyến mại đệm bông ép Korea Kaki cao cấp
+url = https://sieuthidemonline.vn/dem-bong-ep-korea-kaki/
 
 [www.youtube.com]
 match = -56.0%%
@@ -82,9 +82,9 @@ title = đầy đủ các loại máy cập bến để phục vụ cho ace đâ
 url = https://m.facebook.com/groups/317204786650138/posts/1049657896738153/
 
 [www.facebook.com]
-match = 12.0%%
-title = Món Ngon Người Việt Houston
-url = https://www.facebook.com/groups/monngonnvh/posts/d41d8cd9/26300472122877435/
+match = -64.0%%
+title = Đệm Tuấn Anh - Đồng Hành Cùng Tổ Ấm | An Dương District
+url = https://www.facebook.com/tuananh.vn/?locale=vi_VN
 
 [www.tiktok.com]
 match = -76.0%%
