CI images update

--- a/images/chan-3-k-tuyet-sin-thai-lan/config.ini
+++ b/images/chan-3-k-tuyet-sin-thai-lan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chan-3-k-tuyet-sin-thai-lan.html
 lastopen = 2024-06-09 23:46:49
 
 [search]
-lastsearch = 2024-08-01 16:41:25
+lastsearch = 2024-08-01 19:35:16
 
 [shopee.vn]
 match = 7.4%%
@@ -13,8 +13,8 @@ url = https://shopee.vn/CHĂN-LÔNG-TUYẾT-NHUNG-CAO-CẤP-Thái-Lan-Loại-4kg
 
 [h5.lazada.vn]
 match = -11.1%%
-title = Chăn Lông Tuyết Thái Sịn, Chăn Mền Mùa Đông Khổ ...
-url = https://h5.lazada.vn/products/chan-long-tuyet-thai-sin-chan-men-mua-dong-kho-rong-loai-2kg-3kg-4kg-5kg-size-17mx2m-2mx2m3-i2564626690-s12540487699.html
+title = [CHUYÊN SỈ]🌺 chăn băng lông tuyết nhung, ...
+url = https://h5.lazada.vn/products/chuyen-si-chan-bang-long-tuyet-nhung-chan-tuyet-sin-thai-lan-cho-mua-dong-am-ap-loai-3kg4kg5kg-i2100867387.html
 
 [www.lazada.vn]
 match = -44.4%%
@@ -87,9 +87,9 @@ title = Giấu vợ mang tiền mua nhà đi đu đỉnh vàng
 url = https://stockbiz.vn/tin-tuc/giau-vo-mang-tien-mua-nha-di-du-dinh-vang-gio-nha-khong-co-tu-co-tien-ty-thanh-ra-no-nan/26329771
 
 [m.facebook.com]
-match = -51.9%%
-title = Khi được hỏi về tình hình mang thai lần... - Hóng Hớt ...
-url = https://m.facebook.com/story.php/?story_fbid=886045900213984&id=100064257476549
+match = -74.1%%
+title = If you are coming to Penang, attempt to eat as the locals eat
+url = https://m.facebook.com/groups/penangtraveltips/posts/7838451336245791/
 
 [thitruongsi.com]
 match = -7.4%%
@@ -97,9 +97,9 @@ title = Chăn tuyết nhung cho bé giá sỉ, giá bán buôn
 url = https://thitruongsi.com/chan-tuyet-nhung-cho-be-2077270.html
 
 [www.facebook.com]
-match = -22.2%%
-title = GIÁ SIÊU RẺ | 📍 𝐓𝐨𝐮𝐫 𝐓𝐡𝐚́𝐢 𝐋𝐚𝐧 𝟒𝐍𝟑Đ 𝐏𝐀𝐓𝐓𝐀𝐘𝐀- ...
-url = https://www.facebook.com/groups/367569001072970/posts/-𝐓𝐨𝐮𝐫-𝐓𝐡𝐚́𝐢-𝐋𝐚𝐧-𝟒𝐍𝟑đ-𝐏𝐀𝐓𝐓𝐀𝐘𝐀-𝐁𝐀𝐍𝐆𝐊𝐎𝐊-coffee-tổ-chim-𝐋𝐢̣𝐜𝐡-𝐤𝐡𝐨̛̉𝐢-𝐡𝐚̀𝐧𝐡-tháng-7-v/1236797164150145/
+match = -35.3%%
+title = Omniscient Reader
+url = https://www.facebook.com/groups/2626243224357163/
 
 [vnvc.vn]
 match = -74.1%%
@@ -185,4 +185,24 @@ url = https://tuoitre.vn/ong-srettha-bac-bo-thai-lan-co-hai-thu-tuong-cung-luc-2
 match = -7.4%%
 title = Chăn bông tuyết là gì? Ưu và nhược điểm của ...
 url = https://baodaknong.vn/chan-bong-tuyet-la-gi-uu-va-nhuoc-diem-cua-chan-bong-tuyet-170028.html
+
+[chiaki.vn]
+match = -14.8%%
+title = Chăn lông tuyết Muji xuất Nhật nhiều màu, 2m x 2m3
+url = https://chiaki.vn/chan-long-tuyet-muji-xuat-nhat-nhieu-mau
+
+[ggcity.org]
+match = -43.8%%
+title = gg_business (34)
+url = https://ggcity.org/records_request/requests/4884/correspondences/20455/download/4884-business-license.xlsx
+
+[sg.linkedin.com]
+match = 0.0%%
+title = People starting with 'T' - Page 28
+url = https://sg.linkedin.com/directory/people/t-28
+
+[www.signaturetravelnetwork.com]
+match = -22.2%%
+title = Superannuates association canada [25rVoe]
+url = https://www.signaturetravelnetwork.com/deals/shell.cfm?link=https://xn--m1aaaa.xn--p1ai/LviY9r7efe8fe43z
 
