--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-01 18:54:26
+lastsearch = 2024-08-01 19:25:56
 
 [hoa18.com]
 match = -84.2%%
@@ -12,9 +12,9 @@ title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
 url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -147.4%%
-title = Cây Mộc Hương Ta Và 8 Loài Hoa Đẹp Chơi Tết 2023 | Đt ...
-url = https://www.youtube.com/watch?v=NPdIFgtFTso
+match = -105.3%%
+title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
+url = https://www.youtube.com/watch?v=demL5DzJK5M
 
 [kallos.co]
 match = -105.3%%
@@ -27,9 +27,9 @@ title = Lắp đặt tấm pin năng lượng mặt trời
 url = https://www.facebook.com/denledeurosuper/photos/-hướng-dẫn-cách-lắp-đèn-pha-led-năng-lượng-mặt-trời-đúng-chuẩn-️-đèn-pha-led-năn/720282063461086/
 
 [vietnambiz.vn]
-match = -157.9%%
-title = Đầu phiên ngày 1/8, dự báo giá heo hơi đảo chiều tăng tại ...
-url = https://vietnambiz.vn/dau-phien-ngay-18-du-bao-gia-heo-hoi-dao-chieu-tang-tai-mot-vai-dia-phuong-2024731104550950.htm
+match = -163.2%%
+title = So sánh giá vàng 1/8: Vàng miếng SJC vọt lên gần 80 triệu ...
+url = https://vietnambiz.vn/so-sanh-gia-vang-18-vang-mieng-sjc-vot-len-gan-80-trieu-dongluong-2024811245533.htm
 
 [thoibaotaichinhvietnam.vn]
 match = -147.4%%
