--- a/images/chieu-cay-moc-hoa14/config.ini
+++ b/images/chieu-cay-moc-hoa14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa14.html
 lastopen = 2024-06-09 23:35:14
 
 [search]
-lastsearch = 2024-08-01 15:26:24
+lastsearch = 2024-08-01 19:30:26
 
 [www.youtube.com]
 match = -147.4%%
@@ -355,4 +355,9 @@ url = https://www.lazada.vn/products/set-3-cay-hoa-moc-moc-huong-ta-hoa-trang-th
 match = -142.1%%
 title = Cây hoa mộc mang đến hương thơm trong lành ngây ngất ...
 url = http://caycanhnoithat.net/cua-hang/san-pham/cay-hoa-moc-mang-den-huong-thom-trong-lanh-ngay-ngat-cho-khong-gian/
+
+[hoangyen.group]
+match = -142.1%%
+title = Hoa Mộc Hoa Trắng - Công Dụng Hữu Ích Mà Hoa Này Đem Lại
+url = https://hoangyen.group/hoa-moc-hoa-trang/
 
