--- a/images/chieu-lac-d2-08/config.ini
+++ b/images/chieu-lac-d2-08/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-lac-d2-08.html
 lastopen = 2024-06-20 13:15:42
 
 [search]
-lastsearch = 2024-08-01 18:49:47
+lastsearch = 2024-08-01 19:23:38
 
 [batdongsan.com.vn]
 match = -193.3%%
@@ -14,7 +14,7 @@ url = https://batdongsan.com.vn/ban-can-ho-chung-cu-chung-cu-d2-giang-vo
 [vinatools.com]
 match = -200.0%%
 title = Kéo cắt tôn dày 1.0mm BESSEY D208, lưỡi cong cắt ...
-url = https://vinatools.com/keo-cat-ton-d208/
+url = https://vinatools.com/keo-cat-ton-d208/?srsltid=AfmBOoqcSSHeoMke3Q37Tod_lrVonL4M2WA4rk3zrtWWmGwL-ZMUMdHm
 
 [shopvnb.com]
 match = -166.7%%
@@ -57,9 +57,9 @@ title = Điệp Xuân Chiếu lác D2 08
 url = https://www.diepxuan.com/chieu-lac-d2-08.html
 
 [www.facebook.com]
-match = -66.7%%
-title = Baïeta - Cocktails & Chic tapas
-url = https://www.facebook.com/baietasaigon.restaurant/
+match = -213.3%%
+title = Black Kingdom - D2 - CÔNG BỐ GIẢI ĐẤU OFFLINE MANG ...
+url = https://www.facebook.com/photo.php?fbid=925380399591113&id=100063574839369&set=a.647966903999132
 
 [lacvietauction.vn]
 match = -80.0%%
@@ -153,8 +153,8 @@ url = https://u.gg/lol/profile/vn2/dariusmaster-vn2/overview
 
 [shopee.vn]
 match = -100.0%%
-title = adz giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=.adz
+title = aDz giá tốt Tháng 7, 2024 | Mua ngay
+url = https://shopee.vn/search?keyword=aDz
 
 [www.vietnamairport.vn]
 match = -213.3%%
