--- a/images/ga-ni-long-2m-x-2m2/config.ini
+++ b/images/ga-ni-long-2m-x-2m2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 lastopen = 2024-06-09 23:13:19
 
 [search]
-lastsearch = 2024-08-01 16:52:02
+lastsearch = 2024-08-01 19:38:43
 
 [www.diepxuan.com]
 match = 36.8%%
@@ -12,14 +12,14 @@ title = Ga ni lông 2m x 2m2 - Điệp Xuân
 url = https://www.diepxuan.com/ga-ni-long-2m-x-2m2.html
 
 [shopee.vn]
-match = -84.2%%
-title = Ga chống thấm bọc nệm kích thước 2m*2m2 - Shopee
-url = https://shopee.vn/Ga-chống-thấm-bọc-nệm-kích-thước-2m*2m2-i.2157828.1211390382
+match = -42.1%%
+title = GA CHỐNG THẤM 2M X 2M2 ( LOẠI 1 DÀY DẶN )
+url = https://shopee.vn/GA-CHỐNG-THẤM-2M-X-2M2-(-LOẠI-1-DÀY-DẶN-)-i.13475819.120666839
 
 [www.lazada.vn]
 match = -136.8%%
 title = Bộ chăn ga nỉ lông tim cao cấp, bộ ga giường nỉ nhung 4 ...
-url = https://www.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729.html?srsltid=AfmBOor1kpOrK58P7BFSoOUQIIai56WZDlGVGYHM9bsLuiS54QmRQHF1
+url = https://www.lazada.vn/products/bo-chan-ga-ni-long-tim-cao-cap-bo-ga-giuong-ni-nhung-4-mon-phu-chun-1m-1m2-1m4-1m5-1m6-1m8-2mx2m-2m2-i2323748729.html
 
 [demgiare.net]
 match = 5.3%%
@@ -69,7 +69,7 @@ url = https://pubs.acs.org/doi/10.1021/acs.inorgchem.3c00311
 [ketsatdaiphu.vn]
 match = -94.7%%
 title = Bộ Ga Gối Và Vỏ Chăn Nỉ Lông Nhung( Tặng Kèm 01 ...
-url = https://ketsatdaiphu.vn/san-pham/bo-ga-goi-va-vo-chan-ni-long-nhung-tang-kem-01-chiec-goi-trai-tim/?srsltid=AfmBOoq2UFRzZBYReU5lyccSrUWPvZ8RQt4165OECrEJZKrTai6J5Dht
+url = https://ketsatdaiphu.vn/san-pham/bo-ga-goi-va-vo-chan-ni-long-nhung-tang-kem-01-chiec-goi-trai-tim/
 
 [www.tiktok.com]
 match = -210.5%%
