--- a/images/giuong-mn-2/config.ini
+++ b/images/giuong-mn-2/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/giuong-mn-2.html
 lastopen = 2024-06-07 00:35:31
 
 [search]
-lastsearch = 2024-08-01 16:31:38
+lastsearch = 2024-08-01 19:38:03
 
 [dongagroup.vn]
 match = -272.7%%
@@ -87,14 +87,14 @@ title = Giường 2 M Giá Tốt T05/2024 | Mua tại Lazada.vn
 url = https://www.lazada.vn/tag/giuong-2-m/?innerlink=hot_v1&page=2
 
 [tiki.vn]
-match = -181.8%%
-title = Giường 2mx2m2 hàng chính hãng, giao nhanh
+match = -245.5%%
+title = Giường 2mx2m2 hàng chính hãng, giao nhanh - Tiki
 url = https://tiki.vn/search?q=giường 2mx2m2
 
 [www.facebook.com]
 match = -272.7%%
-title = Có bán Giường & lều tắm nắng tại Mankato, Minnesota
-url = https://www.facebook.com/marketplace/mankato/tanning-beds/?locale=vi_VN
+title = Giường & khung giường cỡ lớn gần Mankato, Minnesota
+url = https://www.facebook.com/marketplace/mankato/king-bed-frames/?locale=vi_VN
 
 [www.mayoclinic.org]
 match = -254.5%%
@@ -107,8 +107,8 @@ title = Zinus: Shop Mattresses, Bed Frames & Sofas
 url = https://www.zinus.com/
 
 [pamed.com.vn]
-match = -145.5%%
-title = MN-G2CN - Giường 2 chức năng - Pamed
+match = -409.1%%
+title = MN-G2CN - Giường 2 chức năng | Pamed – Trang thiết bị, vật tư y tế
 url = https://pamed.com.vn/mn-g2cn-giuong-2-chuc-nang
 
 [www.nitrc.org]
