--- a/images/nem-everon-160x200x14/config.ini
+++ b/images/nem-everon-160x200x14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-everon-160x200x14.html
 lastopen = 2024-06-06 17:09:53
 
 [search]
-lastsearch = 2024-08-01 18:57:14
+lastsearch = 2024-08-01 19:26:38
 
 [everon.vip]
 match = -10.0%%
@@ -14,7 +14,7 @@ url = https://everon.vip/nem
 [everonvn.com.vn]
 match = 23.8%%
 title = Bảng Giá Đệm Everon Năm 2024
-url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon?srsltid=AfmBOootCv6i27HqGxktAV8hnOHEEZ6WBQ4UPbmRK-jb1kgEUfQLvSb5
+url = https://everonvn.com.vn/everon/344/bang-gia-dem-everon
 
 [www.sieuthinem.vn]
 match = -95.2%%
