--- a/images/nem-sieu-nhe-9f-14/config.ini
+++ b/images/nem-sieu-nhe-9f-14/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-14.html
 lastopen = 2024-06-10 00:53:20
 
 [search]
-lastsearch = 2024-08-01 13:49:24
+lastsearch = 2024-08-01 19:27:21
 
 [www.lazada.vn]
 match = -61.1%%
@@ -12,9 +12,9 @@ title = Orangesky Cần Câu Cá Biển Yuantou ...
 url = https://www.lazada.vn/products/orangesky-can-cau-ca-bien-yuantou-can-cau-ca-yuantou-sieu-nhe-can-nem-can-cau-ca-yuantou-i2413511947.html
 
 [www.facebook.com]
-match = -77.8%%
-title = NEM Fashion - NEM Fashion added a new photo.
-url = https://www.facebook.com/100064581196454/photos/900570882105610/
+match = -116.7%%
+title = 65k/ phên nem nướng kèm chấm xuất thần cả nhà ...
+url = https://www.facebook.com/58bngo.117.thai.ha/photos/-nem-nướng-phên-đặc-sản-nha-trang-em-lại-về-nem-nướng-phên-nha-trang-mời-các-bác/897465525760153/
 
 [thegioinem.com]
 match = -55.6%%
@@ -47,9 +47,9 @@ title = Nem rán Việt Nam được ca ngợi là món ăn nhẹ ngon nhất ..
 url = https://vietnamnet.vn/nem-ran-viet-nam-duoc-ca-ngoi-la-mon-an-nhe-ngon-nhat-the-gioi-2149178.html
 
 [www.tiktok.com]
-match = -172.2%%
-title = Replying to @user74757483939 Brodard’s nem nuong sauce ...
-url = https://www.tiktok.com/@quyen_cooks/video/7216197212018068779?lang=en
+match = -133.3%%
+title = Nem nướng Chấn Hưng gia truyền nổi tiếng ở quận 5 ...
+url = https://www.tiktok.com/@tinhtungtangvn/video/7350226094391364866
 
 [www.diepxuan.com]
 match = 11.1%%
@@ -77,9 +77,9 @@ title = CÁCH LÀM NEM HẢI SẢN NGON CHUẨN VỊ
 url = https://vuacua.vn/blogs/tips-va-cac-cong-thuc-nau-an/cach-lam-nem-hai-san-ngon-chuan-vi
 
 [cotienfoods.vn]
-match = -72.2%%
-title = Khi nào nem chua chín? Cách nhận biết ...
-url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
+match = -27.8%%
+title = Cách bảo quản nem chua tại nhà
+url = https://cotienfoods.vn/blogs/an-ngon/cach-bao-quan-nem-chua
 
 [icondenim.com]
 match = -133.3%%
