--- a/images/vo-goi-om-es1804-80x100/config.ini
+++ b/images/vo-goi-om-es1804-80x100/config.ini
@@ -4,12 +4,12 @@ url = https://www.diepxuan.com/vo-goi-om-es1804-80x100.html
 lastopen = 2024-07-01 14:25:38
 
 [search]
-lastsearch = 2024-08-01 13:57:18
+lastsearch = 2024-08-01 19:34:55
 
 [www.everonqb.com]
-match = 0.0%%
-title = Everon Quảng Bình Vỏ gối ôm ESM20013 80x100
-url = https://www.everonqb.com/vo-goi-om-esm20013-80x100.html
+match = -39.1%%
+title = Vỏ gối ôm ES1705 80x100 - Everon Quảng Bình Trang Chủ
+url = https://www.everonqb.com/vo-goi-om-es1705-80x100.html
 
 [www.reddit.com]
 match = -91.3%%
@@ -22,9 +22,9 @@ title = Bộ chăn ga gối Everon ES1804
 url = https://everonletrongtan.com/bo-chan-ga-goi-everon-es1804
 
 [www.diepxuan.com]
-match = 34.8%%
-title = Vỏ gối ôm ES1715 80x100 - Điệp Xuân
-url = https://www.diepxuan.com/vo-goi-om-es1715-80x100.html?srsltid=AfmBOorVOdMR-PepwJmDcn_fD-LAK9z031WNlwodbYMzxUJFgSimYcFl
+match = 43.5%%
+title = Điệp Xuân Vỏ gối ôm ES1715 80x100
+url = https://www.diepxuan.com/vo-goi-om-es1715-80x100.html
 
 [forum.cartridgecollectors.org]
 match = -21.7%%
