--- a/images/vo-goi-ke-mau/config.ini
+++ b/images/vo-goi-ke-mau/config.ini
@@ -4,11 +4,11 @@ url = https://www.diepxuan.com/vo-goi-ke-mau.html
 lastopen = 2024-06-10 01:36:08
 
 [search]
-lastsearch = 2024-08-01 19:25:37
+lastsearch = 2024-08-01 20:01:27
 
 [ninhouse.vn]
-match = -161.5%%
-title = Mua Vỏ gối | Áo gối | Bao gối đẹp giá rẻ ...
+match = -246.2%%
+title = Áo gối | Bao gối đẹp giá rẻ NIN House cao cấp tại Tphcm
 url = https://ninhouse.vn/collections/vo-goi
 
 [www.lamido.vn]
