--- a/images/vo-goi-ke-xoa-re-khong-chan/config.ini
+++ b/images/vo-goi-ke-xoa-re-khong-chan/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/vo-goi-ke-xoa-re-khong-chan.html
 lastopen = 2024-06-10 00:42:44
 
 [search]
-lastsearch = 2024-08-01 15:20:35
+lastsearch = 2024-08-01 20:07:39
 
 [www.youtube.com]
 match = -40.7%%
@@ -39,7 +39,7 @@ url = https://eva.vn/mua-sam-gia-ca/kinh-hoang-ruot-goi-sieu-re-den-ngom-c2a1279
 [shopee.vn]
 match = -22.2%%
 title = vỏ gối hello kitty giá tốt Tháng 7, 2024 | Mua ngay
-url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-xoa-nhung-hello-kitty-no/6152316541839545337/343220106741734172/ 
+url = https://shopee.vn/search?keyword=vỏ gối hello kitty&urlold=vo-goi-om-xoa-nhung-hello-kitty-no/6152316541839545337/343220106741734172/
 
 [demxanh.com]
 match = -44.4%%
@@ -290,4 +290,9 @@ url = https://flexhouse.vn/bo-chan-ga-vo-goi-cotton-det-kim-ke-caro-mm2329
 match = -70.4%%
 title = Thứ Sáu 02/08/2024 – Thứ Sáu đầu tháng, tuần 17 thường ...
 url = https://giaophanlongxuyen.org/tin-tuc/thu-sau-02082024-thu-sau-dau-thang-tuan-17-thuong-nien-tin-nhan-hay-khong-tin-nhan.html
+
+[cafef.vn]
+match = -51.9%%
+title = Chàng trai không chân Tô Đình Khánh tung ảnh cưới và ...
+url = https://cafef.vn/chang-trai-khong-chan-to-dinh-khanh-tung-anh-cuoi-va-chuyen-tinh-co-tich-giua-doi-that-2022092207010008.chn
 
