--- a/images/chieu-cay-moc-hoa18/config.ini
+++ b/images/chieu-cay-moc-hoa18/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/chieu-cay-moc-hoa18.html
 lastopen = 2024-06-09 22:43:05
 
 [search]
-lastsearch = 2024-08-01 19:25:56
+lastsearch = 2024-08-01 20:12:05
 
 [hoa18.com]
 match = -84.2%%
@@ -12,9 +12,9 @@ title = Giỏ hoa tươi Mộc Mạc - Giá tốt nhất - Shop Hoa18
 url = https://hoa18.com/san-pham/gio-hoa-tuoi-moc-mac
 
 [www.youtube.com]
-match = -105.3%%
-title = Cách giúp hoa Mộc Hương bền hoa để chơi Tết âm lịch
-url = https://www.youtube.com/watch?v=demL5DzJK5M
+match = -126.3%%
+title = Cây hoa mộc,cây hoa mộc hương ra hoa nhiều,những căn ...
+url = https://www.youtube.com/watch?v=KAnEyj4H3PY
 
 [kallos.co]
 match = -105.3%%
@@ -305,4 +305,9 @@ url = https://phunuvietnam.vn/olympic-paris-thua-2-sec-voi-cung-diem-so-20-22-ta
 match = -163.2%%
 title = Hội nghị giao thương, kết nối xuất khẩu hàng hóa giữa các ...
 url = https://baolamdong.vn/kinh-te/202408/hoi-nghi-giao-thuong-ket-noi-xuat-khau-hang-hoa-giua-cac-doanh-nghiep-khu-vuc-tay-nguyen-voi-doanh-nghiep-han-quoc-84f265b/
+
+[baoyenbai.com.vn]
+match = -168.4%%
+title = Nguyễn Thùy Linh thua tiếc nuối ở trận đấu quyết định tại ...
+url = https://baoyenbai.com.vn/15/326419/nguyen-thuy-linh-thua-tiec-nuoi-o-tran-dau-quyet-dinh-tai-olympic-paris-2024.aspx
 
