--- a/images/nem-di-a-mon-9f-16-re/config.ini
+++ b/images/nem-di-a-mon-9f-16-re/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-di-a-mon-9f-16-re.html
 lastopen = 2024-06-10 00:47:22
 
 [search]
-lastsearch = 2024-08-01 18:12:05
+lastsearch = 2024-08-01 20:14:47
 
 [en.wikipedia.org]
 match = 0.0%%
@@ -52,9 +52,9 @@ title = Balancing Supply and Demand …. in the fast approaching ' ...
 url = https://wattclarity.com.au/articles/2020/05/nem20-balancingsupplydemand-rawofftarget/
 
 [books.google.com]
-match = -38.1%%
-title = A Dictionary of Music and Musicians
-url = https://books.google.com/books?id=RgBKAQAAMAAJ&pg=PA308&lpg=PA308&dq=nem+di+a+mon+9f+16+re&source=bl&ots=9D8EiPL-x8&sig=ACfU3U0NPxeuM8JSnConmS7AS9_KJ6kAMQ&hl=en&sa=X&ved=2ahUKEwi6qYXSl9OHAxUlFVkFHeTRC-kQ6AF6BAgYEAM
+match = -123.8%%
+title = A Critical Pronouncing Dictionary, and Expositor of the ...
+url = https://books.google.com/books?id=mjRAAAAAYAAJ&pg=RA3-PA80&lpg=RA3-PA80&dq=nem+di+a+mon+9f+16+re&source=bl&ots=BLKCt4Envo&sig=ACfU3U0Q_LmSt_2WHsJ6szZT-7OSrBL0Yg&hl=en&sa=X&ved=2ahUKEwiN84D279OHAxWfDzQIHf8sIp8Q6AF6BAgqEAM
 
 [www.diepxuan.com]
 match = -81.0%%
@@ -445,4 +445,9 @@ url = https://buckinghampalace.co.uk/
 match = -90.5%%
 title = Nonclinical Evaluation Report for BNT162b2 [mRNA] ...
 url = https://www.tga.gov.au/sites/default/files/foi-2389-06.pdf
+
+[ang-cooks.com]
+match = 0.0%%
+title = 
+url = https://ang-cooks.com/post/nem-nuong/
 
