--- a/images/nem-sieu-nhe-9f-15/config.ini
+++ b/images/nem-sieu-nhe-9f-15/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/nem-sieu-nhe-9f-15.html
 lastopen = 2024-06-10 00:49:22
 
 [search]
-lastsearch = 2024-08-01 18:51:10
+lastsearch = 2024-08-01 20:07:59
 
 [www.lazada.vn]
 match = -94.4%%
@@ -32,9 +32,9 @@ title = Khi nào nem chua chín? Cách nhận biết ...
 url = https://cotienfoods.vn/blogs/an-ngon/khi-nao-nem-chua-chin
 
 [www.facebook.com]
-match = -94.4%%
-title = Bếp nhà Toronto 🇨🇦 | ☘️NEM CHUA LÁ ỔI 15$ 10 cái
-url = https://www.facebook.com/groups/396891758392980/posts/️nem-chua-lá-ổi-15-10-cái-nem-chua-thanh-hóa-20-15-cái-nem-chua-nhà-e-chuẩn-nem-/1218751472873667/
+match = 0.0%%
+title = Ăn uống ở Bolsa
+url = https://www.facebook.com/groups/672957730149311/
 
 [voz.vn]
 match = 11.1%%
@@ -87,9 +87,9 @@ title = CÙNG VÀO BẾP LÀM NEM NƯỚNG NHA TRANG SIÊU HẤP ...
 url = https://www.youtube.com/watch?v=guu4UvG6cKY
 
 [www.tiktok.com]
-match = -172.2%%
-title = Replying to @user74757483939 Brodard’s nem nuong sauce ...
-url = https://www.tiktok.com/@quyen_cooks/video/7216197212018068779?lang=en
+match = -38.9%%
+title = Chao Recipe Vietnamese Meatball
+url = https://www.tiktok.com/discover/chao-recipe-vietnamese-meatball
 
 [vi.wikipedia.org]
 match = -27.8%%
