--- a/images/tham-ghe-1m7roi/config.ini
+++ b/images/tham-ghe-1m7roi/config.ini
@@ -4,7 +4,7 @@ url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 lastopen = 2024-06-07 00:15:10
 
 [search]
-lastsearch = 2024-08-01 18:32:05
+lastsearch = 2024-08-01 20:03:55
 
 [www.diepxuan.com]
 match = 100.0%%
@@ -12,14 +12,14 @@ title = thảm ghế 1m7rời
 url = https://www.diepxuan.com/tham-ghe-1m7roi.html
 
 [www.facebook.com]
-match = -50.0%%
-title = Fwb&Ons_vn
-url = https://www.facebook.com/groups/fovnpublic/?locale=sw_KE
+match = -213.3%%
+title = Mai Ngô đến trễ 2 tiếng ở sơ khảo Hoa hậu Hòa bình ...
+url = https://www.facebook.com/photo.php?fbid=645364180290734&id=100044514726115&set=a.588659265961226&locale=vi_VN
 
 [voz.vn]
-match = -133.3%%
-title = thảo luận - Hội anh em đi Mazda. | Page 733
-url = https://voz.vn/t/hoi-anh-em-di-mazda.14268/page-733
+match = -293.3%%
+title = tin tức - Trẻ dưới 10 tuổi không được ngồi ghế trước ô tô? | Page 5
+url = https://voz.vn/t/tre-duoi-10-tuoi-khong-duoc-ngoi-ghe-truoc-o-to.805464/page-5
 
 [www.tiktok.com]
 match = 20.0%%
